--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,4 +1,10 @@
 
+  ## 6/2/2023 - [金砖外长会议遭“轰炸”式问普京事 南非今斥责西方](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230602-%E9%87%91%E7%A0%96%E5%A4%96%E9%95%BF%E4%BC%9A%E8%AE%AE%E9%81%AD-%E8%BD%B0%E7%82%B8-%E5%BC%8F%E9%97%AE%E6%99%AE%E4%BA%AC%E4%BA%8B-%E5%8D%97%E9%9D%9E%E4%BB%8A%E6%96%A5%E8%B4%A3%E8%A5%BF%E6%96%B9)
+ ```连续两天金砖集团外长会议会里会外聚焦普京与会会不会被南非执行国际刑事法庭通缉令而逮捕爆炸性问题。南非是国际刑事法院签约成员国，但也与俄罗斯关系良好。南非没有明确回应提问，但今天指控西方国家利用乌克兰战争搅局，怀了南非在内占据世界绝大多数人口希望在南非的金砖峰会讨论脱贫的最大愿望。```0
+  ## 6/2/2023 - [香港不准点纪念六四烛光 海外显示延伸接力](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E9%A6%99%E6%B8%AF%E4%B8%8D%E5%87%86%E7%82%B9%E7%BA%AA%E5%BF%B5%E5%85%AD%E5%9B%9B%E7%83%9B%E5%85%89-%E6%B5%B7%E5%A4%96%E6%98%BE%E7%A4%BA%E5%BB%B6%E4%BC%B8%E6%8E%A5%E5%8A%9B)
+ ```由于香港的国安法限制已经扼杀了曾经规模最大的纪念1989年天安门广场镇压的守夜活动，世界其他地区包括伦敦、纽约、柏林和台北等30多个城市与地点计划接力点亮蜡烛来纪念6月4日周年纪念日。```0
+  ## 6/2/2023 - [奥斯汀与李尚福在香格里拉握手但没有交流](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E5%A5%A5%E6%96%AF%E6%B1%80%E4%B8%8E%E6%9D%8E%E5%B0%9A%E7%A6%8F%E5%9C%A8%E9%A6%99%E6%A0%BC%E9%87%8C%E6%8B%89%E6%8F%A1%E6%89%8B%E4%BD%86%E6%B2%A1%E6%9C%89%E4%BA%A4%E6%B5%81)
+ ```美国五角大楼周五报告，美国国防部长劳埃德·奥斯汀在新加坡香格里拉安全峰会期间与中国国防部长李尚福握了手，但两人没有进行“实质性交流”。中国仍然拒绝与美国进行防长交流。```0
   ## 6/2/2023 - [面对中国导弹威胁 美国在亚洲采取新军事策略](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E9%9D%A2%E5%AF%B9%E4%B8%AD%E5%9B%BD%E5%AF%BC%E5%BC%B9%E5%A8%81%E8%83%81-%E7%BE%8E%E5%9B%BD%E5%9C%A8%E4%BA%9A%E6%B4%B2%E9%87%87%E5%8F%96%E6%96%B0%E5%86%9B%E4%BA%8B%E7%AD%96%E7%95%A5)
  ```美国在亚洲采取新军事策略，包括通过将武器装备、部队和指挥所分散到各地前哨基地，美国希望使中国更难通过削弱任何单一军事设施来发动决定性打击。```0
   ## 6/2/2023 - [与美国对航的中国航班可能不再飞俄罗斯上空航线](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E4%B8%8E%E7%BE%8E%E5%9B%BD%E5%AF%B9%E8%88%AA%E7%9A%84%E4%B8%AD%E5%9B%BD%E8%88%AA%E7%8F%AD%E5%8F%AF%E8%83%BD%E4%B8%8D%E5%86%8D%E9%A3%9E%E4%BF%84%E7%BD%97%E6%96%AF%E4%B8%8A%E7%A9%BA%E8%88%AA%E7%BA%BF)
@@ -53,9 +59,3 @@
  ```乌克兰总统泽连斯基周四(6月1日）在摩尔多瓦举行的欧洲政治共同体峰会上敦促欧洲加强对乌克兰的支持，并表达乌克兰加入北约及欧盟的强烈愿望；法国总统马克龙表示，北约应给予乌克兰安全保证及明确的愿景。```0
   ## 6/1/2023 - [拜登：瑞典将很快加入北约，这将发生我向你们保证](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230601-%E6%8B%9C%E7%99%BB-%E7%91%9E%E5%85%B8%E5%B0%86%E5%BE%88%E5%BF%AB%E5%8A%A0%E5%85%A5%E5%8C%97%E7%BA%A6%EF%BC%8C%E8%BF%99%E5%B0%86%E5%8F%91%E7%94%9F%E6%88%91%E5%90%91%E4%BD%A0%E4%BB%AC%E4%BF%9D%E8%AF%81)
  ```美国总统拜登（JoeBiden）6月1日出席了美国空军学院毕业典礼，并发表讲话。他在讲话中表示：“北约比几十年来更加充满活力和团结，随着我们最新的盟友芬兰的加入它更加强大。而瑞典将尽快加入联盟”。拜登向台下的听众承诺，“这将发生。我向你们保证”。值得一提的是，他在典礼上向学员颁发最后一张毕业证书后，离开讲台时突然倒地。白宫方面称，拜登本人没事。```0
-  ## 6/1/2023 - [美国国防部长访日 日中防长会谈微妙](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230601-%E7%BE%8E%E5%9B%BD%E5%9B%BD%E9%98%B2%E9%83%A8%E9%95%BF%E8%AE%BF%E6%97%A5-%E6%97%A5%E4%B8%AD%E9%98%B2%E9%95%BF%E4%BC%9A%E8%B0%88%E5%BE%AE%E5%A6%99)
- ```美国国防部长奥斯汀将出席2日至4日举行的亚洲安全会议，并历访日本、新加坡、印度和法国。6月1日在东京与日本防卫大臣滨田靖一举行会谈，就日本建立反击能力（对敌基地攻击能力）的运用等展开磋商，而日方从5月开始与中方探讨在亚洲安全会议期间举行日本防卫大臣滨田靖一与中国国务委员、国防部长李尚福会谈，目前进展情况仍然不得而知，美国方面曾摸索奥斯汀在亚洲安全会议上与李尚福举行首次会谈，但中方已经拒绝，因此日中防长是否举行会谈也很微妙。```0
-  ## 6/1/2023 - [美防长：与中方持续缺乏沟通可能导致事件失控](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20230601-%E7%BE%8E%E9%98%B2%E9%95%BF-%E4%B8%8E%E4%B8%AD%E6%96%B9%E6%8C%81%E7%BB%AD%E7%BC%BA%E4%B9%8F%E6%B2%9F%E9%80%9A%E5%8F%AF%E8%83%BD%E5%AF%BC%E8%87%B4%E4%BA%8B%E4%BB%B6%E5%A4%B1%E6%8E%A7)
- ```美国国防部长奥斯汀（LloydAustin）6月1日在东京出席新闻发布会时表示，中方拒绝了由美方提出在本周新加坡香格里拉对话会期间举行两国防长会议的提议是“不幸的”，双方间持续缺乏沟通或将导致“一个可能非常、非常迅速地失去控制的事件”。```0
-  ## 6/1/2023 - [联合国表示对中国政府高层缺乏女性感到担忧](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230601-%E8%81%94%E5%90%88%E5%9B%BD%E8%A1%A8%E7%A4%BA%E5%AF%B9%E4%B8%AD%E5%9B%BD%E6%94%BF%E5%BA%9C%E9%AB%98%E5%B1%82%E7%BC%BA%E4%B9%8F%E5%A5%B3%E6%80%A7%E6%84%9F%E5%88%B0%E6%8B%85%E5%BF%A7)
- ```中国政府高层没有女性和中国女性人权维护者受恐吓骚扰的情况引发联合国担忧。路透社引述说，习近平担任总书记十年间，妇女在政治和政府精英角色中的人数下降，在劳动力中的性别差距扩大。```0
