--- a/新闻/自由亚洲电台亚太.md
+++ b/新闻/自由亚洲电台亚太.md
@@ -1,8 +1,10 @@
 
-  ## 6/2/2023 - [天安门难属坚持六四祭至亲 香港前支联会成员变通悼六四](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/ec-06022023035917.html)
- ```本周日是六四事件34周年，天安门母亲发言人尤维洁表示，当天惨况无法忘怀，坚持争取至真相大白方休。另外，《国安法》使香港不能再举办六四纪念活动，支联会的前常委和义工各自以不同的方法守护这段被变成敏感词的历史。中共如何令十四亿人患了"六四失忆症"？【我是怎么知道六四的】来信节选还有两天就是六四屠杀34周年，"天安门母亲"发言人尤维洁对本台表示，每年这段时间，她都会想起六四当天的情况。尤维洁："我是一个遇难者的亲属，我的心情一到这个时候是不会很舒畅的，因为当年六四惨案，我所看到的，在首都北京十里长安街上，动用军队屠杀平民百姓这一举动，太令人震惊了。我在医院里头各种各样的情景，依然就像发生在昨天的事情一样，历历在目，在我心里头一点一滴，我都没有忘记。"尤维洁表示，本周日是疫情后的首个六四忌日，家属们会坚持到万安公墓祭奠和发表祭文，表达对家人的哀思。她表示，"天安门母亲"发起人丁子霖和张先玲，身体状况还好，但不少成员正与时间竞赛，希望能争取"真相、赔偿和问责"的三大诉求尽快实现。尤维洁："有很多的当年失去儿女的母亲、父亲们，年纪都在八十岁以上，会有一些老年病，这是我们也很担忧的一件事，我们都很希望他们在能在有生之年，能看到六四惨案被公诸于世，能够得到解决，能够安慰他们非常痛苦的心。"对于今年全球多地都有六四的悼念活动，尤维洁感谢大家对六四惨案的关注，也感谢已解散的香港支联会，为悼念留下30多年的烛光。支联会前副主席蔡耀昌：支联会虽解散人民不会忘记在《国安法》实施后，支联会解散，多名前常委先后被起诉，前副主席蔡耀昌也曾因为六四集会被判刑。他相信，他与坚持多年的支联会成员，以及无数曾举起烛光悼念的港人，都不会因为没有晚会而忘记六四。蔡耀昌："不会像过去三十年，每年都有大型的集会，不过，支联会从1989到2019的30年，我们至少能做到，使六四的议题没有被消失，我相信有很多香港人都清楚知道，89年的六四发生过什么事，相信香港人会用自己的方法，继续表达自己的看法，人民不会忘记。"对于今年六四期间，香港维园会变身成亲中社团举办庆回归的市集，港府高层更提早放话，警告不要利用"特别日子"做危害国家的行为。蔡耀昌认为，港府的反应过大。蔡耀昌："我当然不明白有关的社团组织为何要在六四前后，在维园办市集？是否有政治目的，可能要他们自己解答。我明白现在的政治环境已改变，但大多数的港人，不会想搞乱香港和危害国家安全，太多的上纲上线，对香港以至整个中国都不是好事。"蔡耀昌表示，六四当晚会在私人地方静默悼念，相信身陷囹圄的多名支联前骨干，也会用自己的方法，纪念这段悲痛的历史。六四剧本编录成书三语出版编者列明慧：尽普通人力量守护真相"六四舞台"主席列明慧选择以文字和艺术，记载六四和香港的故事。她接受本台访问表示，舞台剧《5月35日》从首演到无法公演，是香港《国安法》的历史见证。在六四34周年前夕，她把这出记载时代的舞台剧本，编成广东话、国语和英语三种语言。在台湾版的剧本，希望把六四和香港的故事延续，在记忆与遗忘战中，尽小市民的一份力量。列明慧："有《国安法》后，很多离散的港人经常在想，我们还可以做什么？在有些事可能会被官方抹去痕迹，我们除了自己要记着之外，也要把这些历史留存下来，我们要做很多的记录，例如我们的剧本，剧本的书在香港不能出版，我们去台湾印，在香港无法演，我们去其他地方和用不同的语言去演，这些都是我们能做到的抗争方式。"列明慧表示，艺术有力量让不同地方的人了解不公义的事，不仅发生在1989年的6月4日，以及天安门母亲等难属身上。她期望三语剧本集，能使《5月35日》在全球不同地方，通过不同的语言公演，提高当地人对六四和香港的认识，再了解香港现在所经历的困难。"记者：陈子非责编陈美华许书婷```0
-  ## 6/2/2023 - [六四34周年 安保堪比二十大 异议人士被上岗或旅游](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/gt-06022023021308.html)
- ```六四34周年日前夕，中国多地实施禁止民间集会的严控措施。北京异议人士查建国，六四伤残人士齐志勇被上岗，独立媒体人高瑜被带到河南旅游，成都秋雨教会信徒被公安"维稳"，贵州人权研讨会部分成员被旅游等。据说今年的六四维稳期约十天，其严厉程度堪比中共二十大安保。六四前夕许志永狱中呼吁　以禁食悼念"六四"【我是怎么知道六四的】来信节选六四34周年日临近，北京、湖南、四川、安徽、湖北及贵州等地异议人士、人权组织或知名维权人士，被警方上岗或者强制旅游。据一位知情人士本周五（6月2日）告诉本台，北京独立媒体人高瑜被公安带到河南洛阳旅游：“高大姐被旅游了，在河南”。贵州一位日前接到公安警告，不得接受采访的异议人士告诉本台：“贵州人权研讨会的陈西、李任科、廖双元、黄燕明等十多名成员被上岗或者被带到贵阳郊区农家乐和度假村。国保像往年一样，待到六四周年日结束后，才能回到贵阳家中。”这位人士还说，两天前，北京异议人士查建国、何德普、江棋生，六四伤残者齐志勇等至少十人被上岗，八九学运参与者季风则被带到贵州省桐梓县旅游。正在贵州家乡的季风对本台证实，他被旅游期间不得接受媒体采访：“所有的媒体采访我，现在都被我拒绝。因为跟我打了招呼，不让我接受采访。我说我可不可以发照片，连照片都不能发。江棋生没消息，电话打不通。这就像二十大期间，绝对不能发照片。”合肥警方上门要带八九参与者沈良庆旅游另一位八九学运参与者，安徽合肥异议人士沈良庆告诉本台，当地公安已经通知他在六四周年日期间，须接受监控：“前几天，合肥市公安局国保支队和包河分局国保大队找我谈过话，说准备带我出去旅游，明天就要出去旅游。他们肯定会要求这几天不能谈六四话题。再有，我在旅游期间肯定是处在软禁状态。”湖南株洲多位接到公安警告的异议人士告诉本台，当局此次严控程度相当于中共二十大会议期间。其中一位陈先生说，警察周五早上刚到过他家：“他（国保）刚上我家来，才走了10分钟，因为六四这件事，说要来看守我，实施管控，可能持续到6月6日，我对此也没办法。我们这里不久前还拘留一个人叫陈思明，因为他在发推特（六四图片）。可能会被刑事拘留，因为他已被拘留4到5次了。”成都警方六四周年日与活跃人士“聚餐”在四川成都，当地异议人士宋先生告诉本台，四川环保作家谭作人，已被警方带走旅游，成都秋雨教会的多位活跃人士也被公安“打招呼”，在六四周年日当天，由警方安排“聚餐”。他说：“秋雨教会比较活跃的一些会友，这一、两天收到（国保）打招呼，我也接到电话，6月4日那一天，要被（国保）约出去吃个饭。谭作人每年六四都要被带出去旅游。”除了异议人士被监控，维权人士也被当局纳入控制范围。武汉维权人士周先生对本台说：“我们这些人虽然跟六四挂不上勾，但是现在六四异议人士该旅游的被旅游了。我们这些维权者也被国保当作所谓维稳的一部分。”每年的六四周年日，中国警方都会控制异议人士。有舆论认为，这是因为当局担心这些人士举行纪念活动或者发表相关言论，而这些活动和言论都被认为是对当局的挑战和批评。此外，中国政府一直试图掩盖、歪曲六四的真相，并禁止公民自由地表达对该事件的看法。因此，在这个敏感时期，警方会加强管控以维护政治秩序。记者古亭责编陈美华许书婷```0
+  ## 6/2/2023 - [六四34周年特别报道：拾起火把，前行!](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/kw-06012023130017.html)
+ ```今年的6月4日是1989年"六四"天安门屠杀34周年。就在去年，中国当局严酷的防疫"清零"政策导致"白纸运动"爆发，也标志着中国新一代人的精神觉醒。那么这一代年轻人是怎样了解"六四"事件的？而“六四”真相又对他们产生了怎样的影响？ 【我是怎么知道六四的】来信节选 今年5月，作者冰乐（笔名）在海外发表的小说《渴望》中，写到了一个和“六四”事件有关的情节：“2011年6月4日，是小女孩岳莹的8岁生日。那天，自小学习京剧表演的她收到了一份特别的礼物：一个密码被妈妈预设为“198964”的红色存钱罐。可是，每当岳莹问起妈妈为什么要选择这串数字作存钱罐的密码时，妈妈的脸上，总会浮现出那个小小的她所不曾见过的复杂神情……。”"六四"密码身为00后的作者冰乐告诉本台，小说中这个情节实际源于她的自身经历：“真实的经历就是，家里每每需要设个无关紧要的密码时，因为小时候受到过耳濡目染的熏陶，我肯定就会用到这串数字。”冰乐说，少年时代，爷爷书架上的那套由包尊信先生主编的《走向未来丛书》就成了她的好朋友。16岁那年，她皈依基督教，并首次从一位长辈那里听说了张伯笠牧师的名字（张伯笠是“六四”时被官方通缉的21个学生之一，名列第17）。一年多后的某天，妈妈忽然叫她去网上看一段视频。“‘孩子，你听一听这个。这个叫张伯笠的牧师，他讲的这些内容真的好有意思。他还是那个天安门学运的副总指挥。’我一听就来了兴趣。天安门什么时候又多了这么一个事？我怎么都没在历史书上了解过？而且终于听到这位风闻已久的张伯笠牧师了。”透过那个未被屏蔽掉的信仰公众号，冰乐听到了“六四”亲历者张伯笠牧师2001年在台湾的布道演讲。“我听到了那些后，我心中的很多疑虑就一下子解开了。那里，我也听到了我熟悉的人名，比如说参与编写《走向未来丛书》的严家祺先生。”直到那时，尚未成年的冰乐才了解到，原来有一段真实发生的事已经被她的祖国从历史书上生生地抹去了......。这也促使她后来撰写了小说《渴望》，并特别“以此献给1989年天安门广场上的那个共和国。”"坦克人"1989年6月5日在天安门广场阻挡行进中的解放军坦克（美联社资料图）贴了封条的历史书在冰乐的小说中，那个设置了8964密码的存钱罐，似乎象征着在中共多年来强力打压下，“六四”的历史被扭曲、被尘封、被湮没。而对于想了解真相的人们，必须用心去寻找“密码”，才能打开那段被封闭的历史。不过现实中，这密码很多时候就在人们身边，只需要有一颗好奇的心去发现。成刚（化名）是一名在中国的国际学校高中生。据他介绍，在国内，国际学校的历史教材都会被审查，有些城市甚至不允许学历史（AP，Alevel或IB课程）。他所在的学校，学生们的历史书一开学就被收了上去，一个月后才还给他们。 “我们的书上被贴上了各种各样的封条。在好奇心的驱使下，我和我的同学们小心翼翼地将书上的封条撕开。”成刚描述说，“我在看关于中国的内容时看到了一张图片（一个男人站在坦克前面阻挡坦克），我和我的同学十分震惊。我们开始读书中的内容，我们发现，原来我们一直被我们的政府蒙在鼓里，我们的历史上从来没有写到这样反人类、反人权的暴行。”这之后，当成刚和同学在教室里聊到“六四”内容并且手里还拿着撕开封条的书的时候，被走进来的老师看到了。老师生气地把他和同学送去了校长室，校方对他们施以处分并要求写检讨。不过，这并没有阻止成刚对真相的渴望。最终，他下载了VPN翻墙软件，并去看了英国广播公司（BBC）和自由亚洲电台（RFA）的相关新闻纪录片，从而了解了“六四”事件。他非常不理解，为什么他去了解历史的真相却要受到惩罚？中国政府又为什么要掩盖事实？目前，本台尚无法独立核实成刚所说的具体情况，但根据中国官方网站和国内媒体报道，中国政府近几年来对国际学校引进的境外教材管理审查日趋严格，国务院及教育部都印发了相关通知。1989年5月31日的北京天安门广场（六四档案图）审查员的失误与成刚一样，来自广东的95后小明（化名）原本也对“六四”一无所知，家里的长辈更从未提起过。由于住家离香港很近，他们可以看到香港电视台的新闻，但一有敏感内容，就会被当局用公益广告覆盖掉。不过，有一次还是让小明窥见了漏洞。“每年五月份，因为那时立法会还没变天，就有很多泛民主派去质询行政长官。然后，‘长毛’(社民联的梁国雄）就问曾荫权，他说你怎么看‘六四’事件后的发展呢？他就把‘六四’事件那几个关键的字讲出来了。”小明说，“曾荫权的回答就是回避嘛，说这些年祖国的发展有目共睹。‘长毛’就问，难道经济发展就可以忽视他们杀人吗？这个也播出来了。”小明当晚便问父母，“六四”事件到底是怎么回事？父亲只是模糊地告诉他，解放军有到天安门去“维持秩序”。从那开始，小明便知道，如果当时没有审查员的失误，他是不可能听到“六四”这个词的，他的政治立场也不可能由此而彻底发生转变。1989年6月4日凌晨，解放军坦克列阵向人民英雄纪念碑逼近。（六四档案图）欲盖弥彰的谎言三十四年来，虽然中国当局压制对“六四”事件的讨论，并严厉封锁一切可以获得真相的渠道，但是依然无法阻挡民众去了解这段历史。最近，在本台就“年轻人如何知道六四”这一话题征集的反馈中，记者发现，人们得到相关信息的途径可谓五花八门。其中多位中国的年轻人提到，去年6月3日晚，“带货一哥”李佳琦在直播间展示坦克冰淇淋蛋糕被当局停播，引发网络热议。由此，他们第一次知道了“六四”。也有读者说，他是因为歌曲《皇后大道东》在2019年夏天突然被消失，而去看了外媒有关香港反修例风波的报道，并看到里面提到“六四”事件，从而了解到这段历史真相。还有一位00后读者提到，促使他主动搜索“六四”资料的原因，是因为某天他在B站看游戏直播时，右上角“击杀信息”忽然显示出“动力小子#8964”（开直播模式时，对手昵称会自动变成角色名+四位数字），结果直播间马上被封，让他感到很荒诞。更有网友说，他上大学时，有位国外教授的zoom视频讲座被安排在6月4日。结果教授先是无法登录，然后又疯狂掉线，最后全班都知道了背后原因。前“六四”学运领袖周锋锁说，中共的这些做法正是“欲盖弥彰”：“如果人们都不关心了，或者都接受这个谎言了，或者外界都遗忘了，那它的确不需要去堵了。现在，就是因为还有人纪念，这个真相还是很活跃地存在，所以他们很积极地封杀。但这个封杀本身，也会导致一些人的好奇。”1989年6月4日凌晨四点，大学生们在北京人民英雄纪念碑下高唱国际歌。（六四档案图）从"小粉红"到"反贼"的思想蜕变了解“六四”真相带给很多年轻人巨大的思想冲击，也让不少人从完全被洗脑的“小粉红”迅速蜕变成为有独立思考能力的正常人。中国的高中生邢铭镇(化名)就是其中之一。自称“出生在一个四代红色的环境下”的邢铭镇在高中时学会翻墙，并注册了一个推特账号：“那时我还是一个‘粉红’，看见对中共不好的言论还会骂上去，维护中共，直到一件又一件中共干过而我从不知道的恶事展现在我面前，其中就包括‘六四’。那都是我们最顶尖的人才啊，他们心中充满希望，他们自己就是希望。他们是否曾想过，这个政权会对自己抱有如此大的敌意?”面对真相，邢铭镇感到非常惭愧，这么晚才知道这样的悲剧。他同时感叹，多年来知道真相的人却这么少：“学生们、民众们年轻的生命、中国实现民主自由的希望等等，中共在‘六四’那一天通通毁掉了。没错，我已经完全转变为一个‘反贼’，不仅是在网上看到的，而且我在现实生活遭遇许多，虽然只有十几年，尤其是新冠三年，一次一次给我打击，磨灭了我对中共的最后幻想。”邢铭镇坦言，自己现在能做的唯有尽可能多地传播真相，将“六四”讲述给同学或是比他更小的朋友们。另一位就读外国语学校的何钧（化名）从初中开始就翻墙玩游戏，顺带玩推特。他还记得，第一次使用推特正好是6月3日，结果铺天盖地的争吵和“六四”内容扑面而来。由于自幼被洗脑，何钧便自然地加入了“粉红”大军，开始和“目田”（网络语，代替被屏蔽的敏感词“自由”）派网友展开了近一年的“战斗”。“到后来，登上Youtube看了很多记录片，包括BBC的、CNN的，还有一些华人Youtuber的讲解，慢慢明白了这个好像不像之前理解的那样。先不说学生在某种程度上有没有错，这至少是一个威权政府对学生的镇压活动，其中是不理智的，是残酷的。”何钧说，他由此开始关注一些被消失的话题，也就是一些中共的“黑历史”。过去三年疫情，中国经济下行，很多事情对他的影响也很大：“印象非常深刻的，比如河南的村镇银行、上海封城，甚至去年反对动态清零的运动。在日常中，我从一个完全是歌功颂德的‘小粉红’，变成了一个一定程度上自认为有了思考能力的人。”进入高中后，何钧遇到更多有相同认知的伙伴。他们在英语角聊政治，在图书馆阅读思想家、哲学家们的书籍，而校内墙上、厕所里甚至出现了纪念“六四”的痕迹。何钧说，他帮助很多同学理性客观地认识了中国，也见证了疫情期间大家的思想转变。他对习近平的独裁专制感到痛心，也为同学们对光明未来的信心所感动。对于中国年轻人识破当局谎言、认知“六四”的过程，前“六四”学运领袖周锋锁说：“在我看来，的确就是这种人性的良善、寻求真理的自然力量是无法抹杀的，特别是在年轻人身上。”“改变中国”网站主编曹雅学也指出：“这种制度性谎言、政府行为的谎言，它制造起来很强大，因为它拥有所有的权力和机器。但是它一旦不成功，就非常容易让被骗的人、信息接收者—民众，对它产生一个彻底的怀疑。”1989年6月4日凌晨5点学生撤离后，解放军完全占领了人民英雄纪念碑。（六四档案图）"白纸运动"与"广场二代"这些敢于冲破当局“六四”谎言的青年人，在近年也自然投身到了捍卫基本自由与人权的抗争中。2022年11月下旬，乌鲁木齐一场大火引发中国多个城市爆发反对当局“清零”封控的“白纸运动”。海外许多中国留学生也勇敢站出来表达声援，其中就有不少是深受“六四”精神感染的青年人，包括“广场二代”。身在美国的邬鹤鸣就是其中之一。他的父亲邬萍晖曾是“六四”学运武汉地区的积极参与者，并为此入狱一年半。不过，直到他长大后，父亲才告诉他当年发生的一切。邬鹤鸣说：“我记得是在我十八岁生日那天，他告诉我他在六四时候的遭遇。我觉得，我爸是个英雄。”“白纸运动”中，邬鹤鸣义无反顾地参与了旧金山的声援集会。他觉得从个人角度来说，自己有这样一种责任：“这可能与我父亲有一定关系。但哪怕在国外，没有我这样背景的年轻人，看到国内的同仁们这样去抗争，在警察国家、极权国家下依然冒着生命危险抗议，我们在海外有一种免于恐惧的优势（Privilege），看到国内的人都已经这么勇敢出来了，甚至有些人被抓了，但我们在海外一点声音都没有，那真的会受到良心的谴责。”现在美国留学、同样是“广场二代”的艾晶晶（化名）去年也在纽约主动参与了声援“白纸运动”的活动。这其中既有家庭背景的原因，也和她自身经历有关。她说：“疫情时在国内，我也算是受迫害了吧。当时我也差点跟警察起冲突，距离被逮走也没多远了。因为当时我真的是公开反抗了，是在一个火车站的广场上。”艾晶晶的父亲八九年“六四”时在北京上大学，也曾积极投身学运，幸运的是他并未被抓捕。同时，全家人也都很“反共”，所以她从很小就知道了“六四”。艾晶晶坦承，“白纸运动”无论从规模上、参与者的思想意识上和民众的支持度上都远不能和当年“六四”相比，海外运动效果也很有限，但是她依然认为，年轻人面对中共高压应该勇敢站出来，做自己该做的事：“既然已经不在中国了，我还怕什么呀！如果在海外的人都不敢站出来的话，那真的没人敢说话了。”1989年6月4日清晨的北京街头（六四档案图）"我们都是同一代人"一位在日本的“白纸运动”参与者“一粒麦”（网名）日前发推文说：“‘六四’在我们父辈的心里活着，就如同‘乌鲁木齐中路’在我们心中活着一样。他们的呼喊与挣扎，就是我们的呼喊与挣扎；他们经历过的希望与丧失，也就是我们经历的希望和丧失。”被誉为“中国摇滚之父”的崔健曾说：“只要天安门上还挂着毛像，我们都还是同一代人。”的确，在反对专制暴政的道路上，当“白纸”一代和“六四”一代在30年多后不期而遇时，他们几乎没有太多代沟。一些“六四”学运领袖很自然地也成为了“白纸运动”青年的忘年交和精神导师，自由、民主的火种在这两代人之间自觉地传承和接力着。“六四”纪念日前夕，前文中提到的高中生邢铭镇特别向当年的“六四”学生们致敬：“你们的行动与愿望失败了，但成功地在历史上留下一道伤口。人们只会被蒙蔽，不会忘记。现在民主自由的种子在中国大地上又开始发芽，我们会努力。你们不会被忘记。我拾起火把，不管有没有人追随，或许我也会倒下，但一定会有更多的人来接续。民主是杀不死的，正义是杀不死的!”展望未来，本文开头提到那位小说作者冰乐充满信心：“不管我们前方的道路是光明的也好，是黑暗的也罢，只有坚持着向前走，才会更容易看见希望！”因安全原因，本文中的成刚、小明、邢铭镇、何钧、艾晶晶皆为化名。他们的声音也经过技术处理。 记者：凯迪（景萱、经纬对本文亦有贡献）责编：何平   网编：洪伟```0
+  ## 6/2/2023 - ["六四"难属坚持祭奠亲人 香港前支联会成员变通悼"六四"](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/ec-06022023035917.html)
+ ```本周日是六四事件34周年，天安门母亲发言人尤维洁表示，当天惨况无法忘怀，坚持争取至真相大白方休。另外，《国安法》使香港不能再举办六四纪念活动，支联会的前常委和义工各自以不同的方法守护这段被变成敏感词的历史。 中共如何令十四亿人患了"六四失忆症"？【我是怎么知道六四的】来信节选 还有两天就是“六四”屠杀34周年，"天安门母亲"发言人尤维洁对本台表示，每年这段时间，她都会想起六四当天的情景。尤维洁："我是一个遇难者的亲属，我的心情一到这个时候是不会舒畅的，因为当年“六四”惨案，我所看到的，在首都北京十里长安街上，动用军队屠杀平民百姓这一举动，太令人震惊了。我在医院里头看到的各种各样的情景，依然就像发生在昨天的事情一样，历历在目，在我心里头一点一滴，我都没有忘记。"尤维洁表示，本周日是疫情后的首个六四忌日，家属们会坚持到万安公墓祭奠和发表祭文，表达对家人的哀思。她表示，"天安门母亲"发起人丁子霖和张先玲身体状况还好，但不少成员正与时间竞赛，希望能争取"真相、赔偿和问责"的三大诉求尽快实现。尤维洁："有很多的当年失去儿女的母亲、父亲们，年纪都在八十岁以上，会有一些老年病，这是我们也很担忧的一件事，我们都很希望他们能在有生之年，能看到“六四”惨案真相被公诸于世，能够得到解决，能够安慰他们非常痛苦的心。"对于今年全球多地都有六四的悼念活动，尤维洁感谢大家对“六四”惨案的关注，也感谢已解散的香港支联会，为悼念留下三十多年的烛光。支联会前副主席蔡耀昌：支联会虽解散人民不会忘记在《国安法》实施后，支联会解散，多名前常委先后被起诉，前副主席蔡耀昌也曾因为“六四”集会被判刑。他相信，他与坚持多年的支联会成员，以及无数曾举起烛光悼念的港人，都不会因为没有晚会而忘记“六四”。蔡耀昌："不会像过去三十年，每年都有大型的集会，不过，支联会从1989到2019的30年，我们至少能做到使“六四”的议题没有被消失，我相信有很多香港人都清楚知道89年的6月4日发生过什么事，相信香港人会用自己的方法，继续表达自己的看法，人民不会忘记。"对于今年“六四”期间，香港维园会变身成亲中社团举办庆回归的市集，港府高层更提早放话，警告不要利用"特别日子"做危害国家的行为。蔡耀昌认为，港府的反应过大。蔡耀昌："我当然不明白有关的社团组织为何要在“六四”前后，在维园办市集？是否有政治目的，可能要他们自己解答。我明白现在的政治环境已改变，但大多数的港人，不会想搞乱香港和危害国家安全，太多的上纲上线，对香港以至整个中国都不是好事。"蔡耀昌表示，“六四”当晚会在私人地方静默悼念，相信身陷囹圄的多名支联前骨干，也会用自己的方法，纪念这段悲痛的历史。蔡耀昌相信，六四当晚身陷囹圄的多名支联前骨干，也会用纪念这段悲痛的历史。（受訪者提供）“六四”剧本编录成书三语出版编者列明慧：尽普通人力量守护真相"六四舞台"主席列明慧选择以文字和艺术，记载六四和香港的故事。她接受本台访问表示，舞台剧《5月35日》从首演到无法公演，是香港《国安法》的历史见证。在“六四”34周年前夕，她把这出记载时代的舞台剧本，编成广东话、国语和英语三种语言。在台湾版的剧本，希望把“六四”和香港的故事延续，在记忆与遗忘战中，尽小市民的一份力量。列明慧："有《国安法》后，很多离散的港人经常在想，我们还可以做什么？在有些事可能会被官方抹去痕迹，我们除了自己要记着之外，也要把这些历史留存下来，我们要做很多的记录，例如我们的剧本，剧本的书在香港不能出版，我们去台湾印，在香港无法演，我们去其他地方和用不同的语言去演，这些都是我们能做到的抗争方式。"列明慧表示，艺术有力量让不同地方的人了解不公义的事，不仅发生在1989年的6月4日，以及天安门母亲等难属身上。她期望三语剧本集，能使《5月35日》在全球不同地方，通过不同的语言公演，提高当地人对“六四”和香港的认识，再了解香港现在所经历的困难。" 记者：陈子非   责编：陈美华、许书婷、嘉远   网编：洪伟```0
+  ## 6/2/2023 - ["六四"34周年   异议人士被上岗被旅游](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/gt-06022023021308.html)
+ ```"六四"34周年前夕，中国多地实施禁止民间集会的严控措施。北京异议人士查建国、六四伤残人士齐志勇被上岗；独立媒体人高瑜被带到河南旅游；成都秋雨教会信徒被公安"维稳"；贵州人权研讨会个别成员被监控。有人形容，今年"六四"期间的维稳程度堪比中共二十大保安。 六四前夕许志永狱中呼吁　以禁食悼念"六四"【我是怎么知道六四的】来信节选 六四34周年临近，北京、湖南、四川、安徽、湖北及贵州等地异议人士、人权组织或知名维权人士，被警方上岗或者被强制旅游。据一位知情人士本周五（6月2日）告诉本台，北京独立媒体人高瑜被公安带到河南洛阳旅游：“高大姐被旅游了，在河南”。北京独立媒体人高瑜（古亭提供）贵州一位日前接到公安警告，不得接受采访的异议人士告诉本台：“贵州人权研讨会的陈西、李任科、廖双元、黄燕明以及张贾龙等人分别被警告、上岗或带到贵阳郊区农家乐和度假村。国保像往年一样，等到六四周年日结束后，才能回到贵阳家中。”这位人士还说，两天前，北京异议人士查建国、何德普、江棋生，六四伤残者齐志勇等至少十人被上岗，八九学运参与者季风则被带到贵州省桐梓县旅游。正在贵州家乡的季风对本台证实，他被旅游期间不得接受媒体采访：“所有的媒体采访我，现在都被我拒绝。因为跟我打了招呼，不让我接受采访。我说我可不可以发照片，连照片都不能发。江棋生没消息，电话打不通。这就像二十大期间，绝对不能发照片。”异议人士季风（古亭提供）合肥警方上门要带八九参与者沈良庆旅游另一位八九学运参与者，安徽合肥异议人士沈良庆告诉本台，当地公安已经通知他在六四周年日期间，须接受监控：“前几天，合肥市公安局国保支队和包河分局国保大队找我谈过话，说准备带我出去旅游，明天就要出去旅游。他们肯定会要求这几天不能谈六四话题。再有，我在旅游期间肯定是处在软禁状态。”异议人士沈良庆（古亭提供）湖南株洲多位接到公安警告的异议人士告诉本台，当局此次严控程度相当于中共二十大会议期间。其中一位陈先生说，警察周五早上刚到过他家：“他（国保）刚上我家来，才走了十分钟，因为六四这件事，说要来看守我，实施管控，可能持续到6月6日，我对此也没办法。我们这里不久前还拘留一个人叫陈思明，因为他在发推特（六四图片）。可能会被刑事拘留，因为他已被拘留四到五次了。”成都警方六四周年日与活跃人士"聚餐"在四川成都，当地异议人士宋先生告诉本台，四川环保作家谭作人，已被警方带走旅游，成都秋雨教会的多位活跃人士也被公安“打招呼”，在六四周年日当天，由警方安排“聚餐”。他说：“秋雨教会比较活跃的一些会友，这一、两天收到（国保）打招呼，我也接到电话，6月4日那一天，要被（国保）约出去吃个饭。谭作人每年六四都要被带出去旅游。”除了异议人士被监控，维权人士也被当局纳入控制范围。武汉维权人士周先生对本台说：“我们这些人虽然跟六四挂不上勾，但是现在六四异议人士该旅游的被旅游了。我们这些维权者也被国保当作所谓维稳的一部分。”每年的六四周年日，中国警方都会控制异议人士。有舆论认为，这是因为当局担心这些人士举行纪念活动或者发表相关言论，而这些活动和言论都被认为是对当局的挑战和批评。此外，中国政府一直试图掩盖、歪曲六四的真相，并禁止公民自由地表达对该事件的看法。因此，在这个敏感时期，警方会加强管控以维护政治秩序。 记者：古亭   责编：陈美华、许书婷、嘉远   网编：洪伟```0
   ## 6/1/2023 - [六四纪念馆召开揭幕记者会 　王丹：为未来储备动力](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/tj-06012023154632.html)
  ```由1989年天安门学运领袖筹建的六四纪念馆即将于6月2日在纽约曼哈顿开馆。为此，纪念馆筹备团队在本周四召开揭幕记者会。多位六四学运领袖在会上谈及创立纪念馆的意义以及对中国民主运动的展望。 专栏：六四34周年　纽约六四纪念馆展现什么？"六四"34周年　纪念馆凝聚两代人民主抗争精神 本周四，多位1989年天安门民主运动领袖在纽约曼哈顿召开了六四纪念馆揭幕记者会，王丹、周锋锁、当年的工人运动领袖吕京花等与会出席。王丹在会上表示，六四纪念馆会在纽约设立是因为香港当局在2021年关闭了在香港的六四纪念馆：“中国当局的意图很明显，他们想掩盖历史，让世界忘记中国当局犯的罪，他们希望大家忘记共产党是建立在暴力及谎言的政权。”王丹指出，透过六四纪念馆，让世人记住1989年的天安门民主运动是件相当重要的事：“1989年是中国近代历史最重要的转折点，比较1989年之前以及过后，会发现中国是两个完全不同的国家。……六四在中国至今依旧是很敏感的话题，它代表着政治反动，我们要维持这股反对力量，并为未来储备动力。纪念六四不仅是为了我们，也是为了中国；不只是为了过去，也是为了未来。”周锋锁：纪念馆展品很多来自六四参与者周锋锁也谈到，纪念馆象征着1989年民主运动世代以及“白纸运动”年轻世代对于民主中国的渴望：“我们抱有希望，不管我们如何被打败，也无论我们还要经过什么样的难关，民主中国的梦一直都存在。我们会团结在一起，就像34年前在天安门广场一样，全世界的人都看到我们对自由中国的梦想。”周锋锁指出，纪念馆中的文物很多是来自六四运动参与者的捐赠：“长期以来，我都在援助因为六四被关押的政治犯，很多人都因为1989年的民运被中国当局起诉，所以我们组建了信息联络网，这也是为何这些展品会到我这边。这些参与者希望这些展品能被展示、保存，同时他们也希望身份能被保护。”六四纪念馆馆长于大海向本台介绍馆藏文物（记者唐缘媛摄）现场众多年轻志愿者　王丹：大家都有自由中国梦在纪念馆的会场中，有众多年轻人参与筹备工作，当中不乏有仍打算回国的中国留学生。针对有关这些青年人是受到什么样的鼓舞，才愿意冒着被中国当局秋后算帐的风险前往纪念馆帮忙的问题，王丹解释道：“我们两代人分享着一样的价值观，我们都希望中国可以变民主。很多的年轻志愿者来自‘白纸运动’世代，但我们分享着同样的梦想，这就是为什么他们参与纪念馆的活动。”推特充斥六四纪念馆假帐号　王丹：面对网军已有所准备在六四纪念馆开幕前夕，社群平台推特上出现大量六四纪念馆的虚假帐号，并试图骗取支持者捐款。王丹就此接受本台记者采访表示，他们对于中国网军的攻击、威胁已有所准备，并没有特别忧心。王丹说：“被网军骚扰和在未来可能遇到一些麻烦，这都是预料之中的。这样的一个纪念馆显然会是中共及中共驻外使领馆的眼中钉、肉中刺，这个是完全可以理解的，但是我们也有做相应的准备。坦率讲，如果有人来捣乱的话，我敢保证他马上会被FBI（美国联邦调查局）发现。我们跟相关单位有做一定的准备，美国政府对此也是了解的。” 记者：唐缘媛   责编：何平   网编：洪伟```0
   ## 6/1/2023 - [又逢儿童节  中国流动人口子女状况惹关注](https://www.rfa.org/mandarin/yataibaodao/shehui/wy-06012023141816.html)
@@ -27,5 +29,3 @@
  ```近期，中国极目新闻的一名记者在贵州报道一起教师溺水案时竟被三名男子跟监与围殴。事情传出后，中国网民质疑溺水案的案情不单纯，并要求中国当局彻查。 中国记者采访疑被打伤引关注本人翻脸说是"摔伤"英国就BBC记者被打召见中国大使 据台湾的中央社报道，今年四月中，贵州毕节织金县有六名教师在河滩捡鹅卵石，然而由于河川上游的引子渡水电站突然放水，导致两名教师被大水冲走，被发现时两人均已溺毙。据传，这两名教师分别是马场小学老师李地军，以及马场镇布底幼稚园老师徐倩。学校校长：老师们捡石子大概是约着玩两名溺亡的教师家属声称，这6名教师会前往河滩捡鹅卵石是因为相关政府单位在进行校务稽查时，称学校装饰的在地化元素不够，建议教师捡鹅卵石来装饰学校环境。不过，布底小学校长张习军否认捡鹅卵石的目的是在应对上级检查。当记者追问张习军那6名老师为什么要一起捡石子时？张习军表示：“那个我不清楚，应该是他们一起约着玩吧！”与此同时，织金县马场镇政府以及中共织金县委宣传部也撇清责任，表示网上谣传“教师为迎接领导检查，在河畔捡鹅卵石装饰校园”并非事实，以及教师会溺亡“全部系那几名教师的个人行为，是他们私自下河玩耍造成的。”记者调查溺水案竟被不明人士痛殴教师溺亡的事件在获得媒体关注后，织金县政府新闻办公室才在5月28日通报这起事件，不过通报中却未说明6名教师捡石头的原因。为此，极目新闻记者李贤城在5月29日被领导指派，前往贵州调查教师溺亡事件。然而，李贤城先是在采访死者家属时，遭一名身份不明的男子盘问，而后又遭到3名陌生男子跟踪、围殴、并摔毁手机。事件过后，李贤城表示，他现在身体已无大碍，他希望当地能够严惩肇事者，揪出幕后指使。对此，当地政府表示公安部门目前尚未釐清陌生男子的身份，但是“肯定与政府部门没有任何关系”。对于当地政府不断粉饰太平、撇清责任，记者在报道案件时又被痛殴的情况，引发外界对于黑金政治的热议及不满，中国网民纷纷表示：“扫黑除恶依旧任重道远啊，尤其是官黑勾结！”、“也许，老师捡石被淹案的背后，有着更可怕的事实，有着更恶霸的势力在横行着”、“这肯定不是个人所为，打人者一定是受到官方或者组织的指派去无所顾忌地行凶！毕节应该出来说清楚，揪出幕后指使者！” 记者：唐缘媛 责编：梒青  网编：洪伟```0
   ## 5/31/2023 - [图型处理芯片霸主黄仁勋积极投资台湾 不轻忽中国竞争](https://www.rfa.org/mandarin/yataibaodao/gangtai/hx-05312023122243.html)
  ```在台湾出生、顶着"一兆男"身价返台掀AI热潮的英伟达（NVIDIA）共同创办人黄仁勋（JensenHuang）投资逾四十亿人民币在台湾"养人才"刮起旋风，未来一周內黄仁勋将访问中国。 台积电是"兵家必争之地"  张忠谋：现在更是如此中资企业在台高薪招揽芯片研发人才遭调查 全球最大独立绘图芯片（GPU）供应商、美商英伟达（台湾翻译“辉达”）共同创办人兼执行长黄仁勋近日访台刮起旋风。英伟达与台湾大学宣布合作成立AI研发中心，新聘1000名员工，并与大学合作培育人才。台湾经济部表示，2021年通过英伟达申请人工智慧创新研发中心计划，总经费约新台币243亿元（约56亿人民币），经济部补助67亿元（约15亿人民币），英伟达自筹约176亿元（约40多亿人民币）。一头白发、身穿黑皮衣的黄仁勋，在台湾大学毕业典礼致词鼓励朝梦想奔跑，“别用走的”、要成为“猎食者，不是被猎食者”等名句，在台北电脑展以四句话令AI秒编成曲，逛夜市买麻花卷，和在街头向两直播女歌手点播女神卡卡（LadyGaga）《捍卫战士》主题曲、一名小哥在餐厅巧遇黄仁勋、临时去买显卡要签名等新闻，在中国微博引发热议。中国网民更多关注黄仁勋30日出席全球媒体与分析师问答会，对外界关切美国政府早前禁止英伟达及超微（AMD）先进芯片销售至中国一事，台湾中央社引述黄仁勋表示，中国有最好的云端服务和消费者互动服务，数位支付也相当进步，电动车市场快速发展。无论美国对中国监管情况如何，中国政府会利用这次机会积极扶植在地化芯片产业发展。英伟达共同创办人黄仁勋访台言行在中国微博引发热议（微博截图）学者：中国缺乏高阶芯片阻碍GPU发展台湾经济研究院产经资料库总监刘佩真接受自由亚洲电台采访表示，黄仁勋是站在商业利益喊话，连英特尔都很难赶上，中芯国际止步在14奈米制成，英伟达明年也许就会采取3奈米制程，中国缺乏先进芯片，三、五年内要超越英伟达GPU霸主地位很难。刘佩真说：“台积电也不可能会帮他代工，也不能帮他代工，三星我想也不会，英特尔也不敢去帮中国作先进制程上的代工。中国即便GPU在三至五年做出来，还是要有相对应先进制程帮他制造，他必须要有一个生态系的产业链的配合。英伟达耕耘GPU相当久，周边生态系也已相当庞大，短期其他竞争者很难去比拟。”台湾国防安全研究院助理研究员王绣雯接受自由亚洲电台采访分析，英伟达、超微（AMD）、英特尔等美商和中国业者合作密切，美方制裁会令美企感到痛！虽然中国还无法量产7奈米以下芯片，短期被甩在后面，可是中国一直在想办法突破这难关。王绣雯说：“比如以各种不同的非最先进晶片如14奈米、18奈米、12奈米，组合起来，用小芯片封装技术组装，希望能追到英伟达最先进处理器，但这要花很大成本跟时间。现在中国大陆正在试这个事情，所以黄仁勋才会很着急，因为他会担心他的一个处理器都卖这么贵，万一中国大陆能用比较便宜的方法，用组合的，也不用最先进的东西能追到他的话，对他的市场可能丧失很大。”英伟达共同创办人黄仁勋访台言行在中国微博引发热议（微博截图）英伟达“降速版”芯片销中国规避美禁令美国政府在去年（2022）8月26日针对超微与英伟达的图形处理器（GPU）祭出出口限制，要求出口相关产品至中国（含香港）与俄罗斯之前，必须取得许可，以避免相关GPU被部署在军事用途上，该禁令有1年的缓冲期。刘佩真指出，黄仁勋应该是看到缓冲期快到了，向美国政府提出呼吁。“针对中国市场，英伟达以降规推出相关芯片以符合美国的法规，输往中国作为替代方案，端视未来美国政府会不会持续对降规生产这部份有些管制？”据综合报导，被美方禁止出货中国的是英伟达Ａ100、Ｈ100的GPU芯片，对开发ChatGPT这类生成式AI技术至关重要。A100是台积电7奈米制程，用于加速AI、资料分析和高效能运算作业。英伟达今年三月证实销售中国的Ｈ800，已获阿里巴巴、腾讯、百度等中国云端业者采用。外媒报导比Ｈ100降速约一半。王绣雯说，有中国业者反应“降级版”仍很有帮助。如果美国政府发现降级版仍有助中国大陆研发导弹、超高音速武器，可能还是会禁止。一些美商因此在中国采取入股或投资设公司，以避免受限美国禁令。王绣雯提到，2020、2021全球前五名ＡＩ伺服器，中国浪潮集团、华为、联想都在列。中国ＡＩ伺服器云端、终端，都会需要大量ＡＩ芯片，英伟达看好起码2025年前后都有非常好的前景。如果只能销中国降级版芯片，对生意有很大影响。美国半导体产业协会(SIA)近日也呼吁，尽管美国政府有国家安全顾虑，美国半导体商仍希望能进入中国市场，盼政府订出明确规范，并强调中国是最大市场，必须在那个市场发挥作用。英媒《金融时报》5月24日刊出黄仁勋专访，提到黄仁勋坦言拜登政府的出口管制措施，已让英伟达被绑手绑脚。中国约占美国科技产业市场三分之一比重，如果美国企业无法与中国作生意，将对美国企业造成巨大损失。黄仁勋并提及，理论上在台湾以外的地方制造芯片，是可行的，但中国市场是无法被取代的。中国微博文章转载该文特别强调黄仁勋说，“如果我们被剥夺了中国市场，我们没有备用计划。没有另一个中国，只有一个中国。”英伟达共同创办人黄仁勋访台言行在中国微博引发热议（微博截图）台财经专家：黄仁勋光芒盖过马斯克媒体报导未来一周黄仁勋将到中国访问，与厂商交流。王绣雯说，就像一般美国商人，亚洲转一圈，考察台湾市场后考察中国市场。美国ＮＢＡ职篮明星林书豪也是到中国大陆打完球再到台湾打球。OpenAI开发的人工智慧聊天机器人程式ChatGPT去年十一月推出带动AI热潮下，英伟达股价从年初108美元狂飙，5月31日突破401美元。英伟达市值近1兆美元，跃升世界前五大公司，台湾财经专家谢金河就说，黄仁勋的光芒盖过了正在中国访问的特斯拉（Tesla）执行长马斯克（ElonReeveMusk）。台媒天下杂志形容，黄仁勋并带动一票台厂成了“AI伺服器大军”。台媒联合报报导，全球IC设计前十强中，辉达、超微（AMD）、联发科、联咏、瑞昱五大公司，掌舵者都是台湾出身。外媒指出，这特殊“人脉网”，是台湾半导体从下游往上游制霸的关键。 记者：夏小华   责编：许书婷、梒青   网编：洪伟```0
-  ## 5/31/2023 - [台剧团无惧国安法阴霾　重演六四主题舞台剧](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/ec-05312023111642.html)
- ```六四事件34周年前夕，台湾剧团重演在香港无法公演的六四舞台剧《5月35日》，六场票房全满。主办单位相信，随着中国对台湾及世界的威胁和影响在扩大，以六四事件为主题的舞台剧会更有吸引力。 香港数百位基督教牧者信徒联署《六四34周年纪念祷文》【我是怎么知道六四的】来信节选 国际特赦组织台湾分会与台湾的"晓剧场"合作，在六四34周年前夕，重演以天安门难属为主题，讲述遇难学生母亲临终前，想到天安门广场拜祭儿子故事的六四舞台剧《5月35日》。国际特赦组织台湾分会秘书长邱伊翎表示，去年在台湾播放港版《5月35日》影片，引起回响大，已有构思在台重演的计划，今年计划公演共六场，全部爆满，反应比去年更佳，相信是随着中国对全球威胁越大，使更多人关注中国和香港人权主题。邱伊翎："我们不是只在讲六四，而是会去谈更多更广泛的人权议题，李明哲的事件、富察和杨智渊等，有越来越多的人，他们入境中国或者香港，可能就会面临到人身安全的危险。在国安法实施之后，中国政府在不断要扩大法律的管辖权，可以逮捕更多外国人，甚至包括台湾人，即使不入境中国跟香港，在欧洲或其他国家，你可能也都会被中国政府要求，送到中国去接受法律的审判，越来越多的人可以去感同身受，不可能是跟我没有关系的。"国际特赦组织台湾分会秘书长邱伊翎表示，在台重演《5月35日》反应佳与随着中国对全球威胁越大有关。（记者李宗翰摄）台重演《5月35日》舞台剧反应佳与中国对全球威胁升高有关邱伊翎表示，以往在台湾，主要是人权团体关注六四事件和中国人权状况，希望重演谈六四的舞台剧故事，能吸引很少接触中国敏感政治话题的台湾人的关注。邱伊翎："中国的人权议题，其实并不是我们自己关起门来不去管它，它就不会影响到我们。事实上，它会影响到整个区域，甚至是全球的人权的现况。一般的老百姓完全不碰政治，但是可能在他的日常生活中，他还是会去面临到家人或亲友，都会用各种方式和理由，限制他有什么话该讲，有什么话不该讲，或可不可以去悼念。对自由的压迫和管控，其实是无所不在的。"她表示，在找寻剧场合作时，没有剧团因为《香港国安法》的风险而拒绝，但会特别安排广东话读白的香港表演者配戴面具。台版《5月35日》导演锺伯渊表示，自由价更高，甘愿为《5月35日》放弃在中港的合作计划。（记者李宗翰摄）台版《5月35日》导演：自由价更高甘愿放弃在中港的合作"晓剧场"兼台版《5月35日》导演锺伯渊表示，决定参与计划时，已考虑可能不能再到香港。他表示，有如此决心，与他不只一次体会大陆对自由的打压有关，2020年台湾大选投票日前夕，在澳门被查问的经验，让他更珍惜自由的可贵。锺伯渊："护照上面我有贴'RepublicofTaiwan'，一直以来去在各国，都没有遇到有人要求我把它撕掉。2020年当我到澳门的时候，就被带进小房间里面质问，要我把它撕掉，他们就放行我。隔天晚上我再回来台湾，看到我的朋友时，我就哭出来了。其实你会很恐惧，你不敢跟任何人说的恐惧感，状况比你想象中还要严重。在那次的经验之后，我认为自由是很重要的，我希望持续的去彰显永远都可以发出来的声音，而不要封闭我自己说话的权利。好像现在不能去香港了，那我就先不要了。"台湾重演在香港无法再公演的六四舞台剧《5月35日》（受访者提供）台版《5月35日》将加入台湾和香港的抗争元素虽然六四事件已发生34年，但锺伯渊认为，《5月35日》通过遇难者母亲"小林"，充份表达天安门难属多年来被打压的情况和伤痛，又说，六四事件既是历史，也能反映当代的人权情况，在台公演的版本，除了谈六四，也加入台湾和香港的抗争历史元素。锺伯渊："这次演出我们要模糊那个界线，'小林'听的台语歌，是台语禁歌，会牵涉到228事件的时候，白色恐怖的台语禁歌。观众会在舞台上面看到一把折烂的伞，代表曾经有过的“雨伞革命”；花瓶里有一束枯掉的太阳花等等，所有关于抗争的意象，都会在舞台上呈现，利用当代这些历史融合戏里面来，它不只是一个单一的，或许透过这个故事，也可以让观众思考，我要经济挂帅，还是要人权挂帅。"演遇难学生母亲"小林"的表演者梁德翔表示，理解这次表演的题材敏感，但强调，作为演员，不是要做政治抗争，只是想呈现母亲对儿子的爱，没有因安全和不能再入境香港等问题影响演出。 记者：陈子非、淳音   责编：许书婷、嘉远   网编：洪伟```0
