--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,6 @@
 
+  ## 6/2/2023 - [三十四年后再回首 六四学生“没想到”什么？](https://www.voachinese.com/a/tiananmen-massacre-student-leaders-recalling-what-surprised-them-20230602/7120197.html)
+ ```由于中国共产党当局的信息封锁，中国许多年轻人不清楚甚至不知道，三十四年前的1989年6月4日，中共当局曾经出动军队对聚集在天安门广场的学生和市民抗议者进行了血腥镇压。当年的热血青年学生，如今也都白发斑斑。三十四年前和三十四年后，回首往事，他们最感到意外的是什么？```0
   ## 6/2/2023 - [六四周年将至，港人在国安法淫威下选择私下纪念
 
 ](https://www.voachinese.com/a/amid-shrinking-freedoms-hong-kongers-commemorate-tiananmen-anniversary-privately-20230602/7119986.html)
@@ -41,5 +43,3 @@
  ```分析人士在非洲国家领导人上周访问北京后表示，刚果（金）总统费利克斯·齐塞克迪（FelixTshisekedi）要兑现在12月选举之前彻底改革他所说的与中国不公平的矿产换基础设施协议的承诺，将会面临一场艰苦的斗争。刚果（金）这个资源丰富但饱受冲突困扰的国家在12月份将要举行大选。```0
   ## 6/1/2023 - [僧多粥少：中国一千多万应届大学毕业生就业前景惨淡](https://www.voachinese.com/a/china-s-11-6m-graduates-face-a-jobs-market-with-no-jobs-20230601/7118431.html)
  ```随着中国16至24岁青年人的失业率今年4月达到创纪录的20.4%，今年即将毕业的1158万名大学毕业生将面临一个越来越严峻的就业市场，或“一个没有职位的就业市场”。```0
-  ## 6/1/2023 - [举办六四晚会逾30年，澳门民联会不堪高压宣告解散](https://www.voachinese.com/a/macau-s-tiananmen-massacre-group-disbands-for-fear-of-new-law-20230601/7118877.html)
- ```近年澳门当局把悼念六四定性为分裂国家和颠覆中央人民政府，加上新的国家安全法实施，成立超过30年的澳门民主发展联委会（民联会）决定自行解散。不过，今年六四，前民联会核心成员仍将以自己的方式，悼念当年在北京天安门广场发生的悲剧。```0
