--- a/新闻/德国之声.md
+++ b/新闻/德国之声.md
@@ -1,4 +1,10 @@
 
+  ## 6/2/2023 - [约翰·塞巴斯蒂安·巴赫:D小调托卡塔](https://www.dw.com/zh/约翰·塞巴斯蒂安·巴赫-d小调托卡塔/a-65809848?maca=chi-rss-chi-all-1127-rdf)
+ ```D小调托卡塔是家约翰·塞巴斯蒂安·巴赫最脍炙人口的管风琴作品之一，热情奔放、气势宏大。```0
+  ## 6/2/2023 - [德国向右转？选项党与社民党的支持率齐平](https://www.dw.com/zh/德国向右转？选项党与社民党的支持率齐平/a-65809300?maca=chi-rss-chi-all-1127-rdf)
+ ```如果下周日举行联邦议院选举，德国右翼的选项党将获得18%的席位，与社民党相当。为什么会这样呢？```0
+  ## 6/2/2023 - [金磚五國覓替代貨幣 籲重新平衡世界秩序](https://www.dw.com/zh/金磚五國覓替代貨幣-籲重新平衡世界秩序/a-65800252?maca=chi-rss-chi-all-1127-rdf)
+ ```金磚5國外長1日在南非舉行會談，除了呼籲「重新平衡」世界秩序，也討論尋找美元的替代貨幣。俄羅斯總統普京是否參加金磚國家8月峰會，也引發關注。為什麼此事成為關注焦點？```0
   ## 6/2/2023 - [德语媒体:供应链法让欧企将市场让与中国](https://www.dw.com/zh/德语媒体-供应链法让欧企将市场让与中国/a-65807774?maca=chi-rss-chi-all-1127-rdf)
  ```《商报》刊发评论指出，中国经济疲软也将让依赖对华出口的德国企业蒙受损失。《法兰克福汇报》则担心，旨在让欧洲企业为境外供应链承担社会与环境责任的欧盟供应链法案，很可能会导致欧洲人将市场拱手让给努力拓展经济影响力的中国。```0
   ## 6/2/2023 - [李辉呼吁停止输送武器 中国或再派员促谈](https://www.dw.com/zh/李辉呼吁停止输送武器-中国或再派员促谈/a-65808037?maca=chi-rss-chi-all-1127-rdf)
@@ -21,22 +27,16 @@
  ```特斯拉首席執行官馬斯克6月1日結束炫風訪華行。有外媒報導，他週三曾與中國國務院副總理丁薛祥會晤，但中國官方尚未證實這項消息。```0
   ## 6/2/2023 - [俄控美用iPhone監控外交官 蘋果否認](https://www.dw.com/zh/俄控美用iphone監控外交官-蘋果否認/a-65800294?maca=chi-rss-chi-all-1127-rdf)
  ```俄羅斯聯邦安全局稱，他們發現美國政府入侵了俄羅斯數千支iPhone手機，其中包含其他國家在俄外交官的手機。網安公司卡巴斯基說，有數十名員工的設備在這次行動中遭到破壞，但該公司並未直接將此歸咎於美國。```0
-  ## 6/2/2023 - [金磚五國覓替代貨幣 籲重新平衡世界秩序](https://www.dw.com/zh/金磚五國覓替代貨幣-籲重新平衡世界秩序/a-65800252?maca=chi-rss-chi-all-1127-rdf)
- ```金磚5國外長1日在南非舉行會談，除了呼籲「重新平衡」世界秩序，也討論尋找美元的替代貨幣。俄羅斯總統普京是否參加金磚國家8月峰會，也引發關注。為什麼此事成為關注焦點？```0
   ## 6/1/2023 - [欧洲议会投票 支持制定更严格的欧盟供应链法](https://www.dw.com/zh/欧洲议会投票-支持制定更严格的欧盟供应链法/a-65795847?maca=chi-rss-chi-all-1127-rdf)
  ```德国已有本国的供应链法。欧盟范围内的供应链法则正在制定中。欧洲议会、欧盟委员会和代表各成员国的欧盟理事会是制定法律的三方。```0
   ## 6/1/2023 - [德语媒体：对“去风险”，德国想的太天真](https://www.dw.com/zh/德语媒体：对-去风险-，德国想的太天真/a-65795713?maca=chi-rss-chi-all-1127-rdf)
  ```对中国的“去风险”战略，是近期德语媒体持续关注的话题。《世界报》指出，这一概念不像德国人想的那么简单。《柏林日报》认为，中国高层正在把欧洲作为拉拢的目标。.```0
   ## 6/1/2023 - [WhatsApp在俄罗斯首次因违禁内容被罚款](https://www.dw.com/zh/whatsapp在俄罗斯首次因违禁内容被罚款/a-65794697?maca=chi-rss-chi-all-1127-rdf)
  ```俄罗斯法院分别以未删除违禁药物内容和乌克兰战争信息而对WhatsApp和维基百科开出罚款。维基媒体此前曾表示，俄罗斯当局不满的信息来源良好，符合维基百科标准。```0
-  ## 6/1/2023 - [德国左翼激进派人士被判入狱](https://www.dw.com/zh/德国左翼激进派人士被判入狱/a-65794032?maca=chi-rss-chi-all-1127-rdf)
- ```因对新纳粹分子发动多次袭击，现年28岁的左翼激进派人士LinaE.及其同谋被德累斯顿地方法庭判处监禁。```0
   ## 6/1/2023 - [乌克兰何时加盟？北约各国仍存在分歧](https://www.dw.com/zh/乌克兰何时加盟？北约各国仍存在分歧/a-65794083?maca=chi-rss-chi-all-1127-rdf)
  ```德国外长贝尔博克说：“北约的门户开放政策一如既往，但与此同时，战争还在进行之中，我们显然不能讨论接受新成员。”```0
   ## 6/1/2023 - [李尚福签署备忘录 将与新加坡开设国防高层热线](https://www.dw.com/zh/李尚福签署备忘录-将与新加坡开设国防高层热线/a-65793874?maca=chi-rss-chi-all-1127-rdf)
  ```中国与新加坡周四为设立一条国防领导人热线电话奠定基础。新加坡是美国在亚洲的紧密伙伴国。此次备忘录签署正值北京部分暂停与华盛顿高层对话之际。```0
-  ## 6/1/2023 - [又来“动态清零”？河南省发起高校毕业生就业“百日冲刺”行动](https://www.dw.com/zh/又来-动态清零-？河南省发起高校毕业生就业-百日冲刺-行动/a-65793360?maca=chi-rss-chi-all-1127-rdf)
- ```河南省教育厅5月30日印发《河南省2023届高校毕业生就业“百日冲刺”行动工作方案》。其中关于要确保在8月31日前，零就业家庭毕业生和长期未就业毕业生动态清零的提法引起网民热议。```0
   ## 6/1/2023 - [2022年德国入籍人数创历史新高](https://www.dw.com/zh/2022年德国入籍人数创历史新高/a-65791823?maca=chi-rss-chi-all-1127-rdf)
  ```2022年，申请和获得德国国籍的人数创下过去20年的历史记录。这是一个好消息，因为德国政府希望吸引更多专业人才来到德国，并为此推动了国籍法改革。```0
   ## 6/1/2023 - [德国总理顾问访华：北京宣传，柏林沉默](https://www.dw.com/zh/德国总理顾问访华：北京宣传，柏林沉默/a-65791189?maca=chi-rss-chi-all-1127-rdf)
@@ -87,12 +87,12 @@
  ```中國脫口秀圈近日因「作風優良，能打勝仗」引起熱議，有網友戲稱，中國言論審查太苛刻，想搞脫口秀「要麼管住嘴，要麼邁開腿（潤至自由世界）」。脫口秀演員們如何看待不斷收緊的審查紅線？脫口秀在兩岸又有何差異？DW訪問了4位曾在兩岸演出的脫口秀演員，請他們將「脫口秀在中國」的包袱一一抖開。```0
   ## 5/25/2023 - [青年失业率居高不下 靠“孔乙己脱长衫”解决？](https://www.dw.com/zh/青年失业率居高不下-靠-孔乙己脱长衫-解决？/a-65732307?maca=chi-rss-chi-all-1127-rdf)
  ```为了防止年轻人陷入“毕业即失业”的困境，中国当局使出浑身解数，一面鼓励中小微企业招聘应届生，一面进行公务员和硕士扩招，同时展开舆论宣传攻势。此外，还有高校暗中用力，让数据“更好看”。```0
-  ## 5/21/2023 - [研究：全球湖泊超过半数正在干涸](https://www.dw.com/zh/研究：全球湖泊超过半数正在干涸/a-65676698?maca=chi-rss-chi-all-1127-rdf)
- ```一项最新研究显示，全球变暖和人类消耗正在导致全球湖泊干涸。```0
-  ## 5/21/2023 - [全球育儿成本韩国最高：钱都花在课外班了](https://www.dw.com/zh/全球育儿成本韩国最高：钱都花在课外班了/a-65674902?maca=chi-rss-chi-all-1127-rdf)
- ```研究显示，韩国是全球育儿成本最高的国家，为GDP的7.79倍，大量花费来自大量的课外补习班。中国位居第二，养育一个孩子到18岁的成本是人均GDP的6.9倍，其次是德国（3.64倍）和法国（2.24倍）。```0
   ## 5/21/2023 - [航运公会：到2032年船舶回收将翻倍](https://www.dw.com/zh/航运公会：到2032年船舶回收将翻倍/a-65669628?maca=chi-rss-chi-all-1127-rdf)
  ```随着航运业船队转型，变得更加利于气候保护，主要分布于亚洲地区的「船舶坟场」在未来几年内可能会获得空前的关注。```0
+  ## 5/21/2023 - [全球育儿成本韩国最高：钱都花在课外班了](https://www.dw.com/zh/全球育儿成本韩国最高：钱都花在课外班了/a-65674902?maca=chi-rss-chi-all-1127-rdf)
+ ```研究显示，韩国是全球育儿成本最高的国家，为GDP的7.79倍，大量花费来自大量的课外补习班。中国位居第二，养育一个孩子到18岁的成本是人均GDP的6.9倍，其次是德国（3.64倍）和法国（2.24倍）。```0
+  ## 5/21/2023 - [研究：全球湖泊超过半数正在干涸](https://www.dw.com/zh/研究：全球湖泊超过半数正在干涸/a-65676698?maca=chi-rss-chi-all-1127-rdf)
+ ```一项最新研究显示，全球变暖和人类消耗正在导致全球湖泊干涸。```0
   ## 5/21/2023 - [世界气象组织警告：未来五年将创下最热记录](https://www.dw.com/zh/世界气象组织警告：未来五年将创下最热记录/a-65668526?maca=chi-rss-chi-all-1127-rdf)
  ```世界气象组织表示，厄尔尼诺和温室气体的综合影响将导致气温飙升，并警告说：“我们需要做好准备。”```0
   ## 5/20/2023 - [又一脱口秀演员在中国遭封杀](https://www.dw.com/zh/又一脱口秀演员在中国遭封杀/a-65684797?maca=chi-rss-chi-all-1127-rdf)
@@ -105,7 +105,5 @@
  ```德国历史上最引人注目的文物盗窃案之一周二（5月16日）得以宣判，法院对柏林黑帮雷莫（Remmo）家族有组织犯罪团伙的五名成员作出了数项监禁判决。```0
   ## 5/16/2023 - [再創亞洲第一 台灣通過同志無血緣共同收養](https://www.dw.com/zh/再創亞洲第一-台灣通過同志無血緣共同收養/a-65632519?maca=chi-rss-chi-all-1127-rdf)
  ```台灣在同婚法案4週年前夕，16日在立法院會三讀修正通過，讓同婚雙方當事人之一方收養他方的子女或共同收養時，準用民法關於收養的規定，破除原本的血緣限制。同志家庭收養的現況是什麼？```0
-  ## 5/15/2023 - [德国归还殖民时期文物--好心办坏事？](https://www.dw.com/zh/德国归还殖民时期文物-好心办坏事？/a-65626915?maca=chi-rss-chi-all-1127-rdf)
- ```归还文物是为了纠正殖民时期的错误，原本是件好事。但如果收到文物的国家，不一定公开展出这些宝贵遗产，而是转入私人之手，又该怎么办呢？德国把"贝宁铜器"归还给了尼日利亚，究竟是对是错，引发了一场火热的辩论。```0
   ## 5/14/2023 - [德国人预期寿命低于多数西欧国家](https://www.dw.com/zh/德国人预期寿命低于多数西欧国家/a-65599686?maca=chi-rss-chi-all-1127-rdf)
  ```最新公布的一项研究显示，与其他西欧国家比较，德国人的平均预期寿命相对较低。一个重要原因是心血管疾病致死的比例较高。研究者强调，大多数心血管疾病本是可以预防的。```0
