--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,4 +1,8 @@
 
+  ## 6/2/2023 - [英国国防部长称乌克兰今年能夺回克里米亚](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230602-%E8%8B%B1%E5%9B%BD%E5%9B%BD%E9%98%B2%E9%83%A8%E9%95%BF%E7%A7%B0%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%8A%E5%B9%B4%E8%83%BD%E5%A4%BA%E5%9B%9E%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A)
+ ```英国国防部长华莱士今天接受华盛顿邮报专访。该报称，与其他一些北约官员的私下沉思相反，华莱士表示，乌克兰确实有可能成功夺回克里米亚半岛。普京在2014年非法吞并克里米亚半岛，今年俄罗斯军队所需的设备均用完了。华莱士称，乌克兰可能不会今夏就加入北约，但各国与乌克兰签订双边或多边防御合作，也能提高保护乌克兰安全的高度。```0
+  ## 6/2/2023 - [台湾一男称特选六四纪念馆开馆日指控王丹9年前强奸他未遂并称坏如民进党 王丹驳斥](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E5%8F%B0%E6%B9%BE%E4%B8%80%E7%94%B7%E7%A7%B0%E7%89%B9%E9%80%89%E5%85%AD%E5%9B%9B%E7%BA%AA%E5%BF%B5%E9%A6%86%E5%BC%80%E9%A6%86%E6%97%A5%E6%8C%87%E6%8E%A7%E7%8E%8B%E4%B8%B99%E5%B9%B4%E5%89%8D%E5%BC%BA%E5%A5%B8%E4%BB%96%E6%9C%AA%E9%81%82%E5%B9%B6%E7%A7%B0%E5%9D%8F%E5%A6%82%E6%B0%91%E8%BF%9B%E5%85%9A-%E7%8E%8B%E4%B8%B9%E9%A9%B3%E6%96%A5)
+ ```台湾前政治工作者李援军今天指控民运领袖王丹9年前邀他去美国，在纽约某家饭店强吻他、强暴未遂。王丹晚间回应表示，这位作者所说的“性骚”之事完全不存在，不会再回应。王丹并说，今天“六四纪念馆”正式开幕，请大家多多关注。```0
   ## 6/2/2023 - [金砖外长会议遭“轰炸”式问普京事 南非今斥责西方](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230602-%E9%87%91%E7%A0%96%E5%A4%96%E9%95%BF%E4%BC%9A%E8%AE%AE%E9%81%AD-%E8%BD%B0%E7%82%B8-%E5%BC%8F%E9%97%AE%E6%99%AE%E4%BA%AC%E4%BA%8B-%E5%8D%97%E9%9D%9E%E4%BB%8A%E6%96%A5%E8%B4%A3%E8%A5%BF%E6%96%B9)
  ```连续两天金砖集团外长会议会里会外聚焦普京与会会不会被南非执行国际刑事法庭通缉令而逮捕爆炸性问题。南非是国际刑事法院签约成员国，但也与俄罗斯关系良好。南非没有明确回应提问，但今天指控西方国家利用乌克兰战争搅局，怀了南非在内占据世界绝大多数人口希望在南非的金砖峰会讨论脱贫的最大愿望。```0
   ## 6/2/2023 - [香港不准点纪念六四烛光 海外显示延伸接力](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E9%A6%99%E6%B8%AF%E4%B8%8D%E5%87%86%E7%82%B9%E7%BA%AA%E5%BF%B5%E5%85%AD%E5%9B%9B%E7%83%9B%E5%85%89-%E6%B5%B7%E5%A4%96%E6%98%BE%E7%A4%BA%E5%BB%B6%E4%BC%B8%E6%8E%A5%E5%8A%9B)
@@ -35,7 +39,7 @@
  ```乌克兰今天报告已经拦截了所有俄罗斯昨夜今晨攻击乌克兰的导弹和无人机，这些导弹和无人机仍然是在夜间出动，袭击目标包括基辅。```0
   ## 6/2/2023 - [香港罕见闪电劈公屋外墙 专家指避雷设施非百分百保障](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E9%A6%99%E6%B8%AF%E7%BD%95%E8%A7%81%E9%97%AA%E7%94%B5%E5%8A%88%E5%85%AC%E5%B1%8B%E5%A4%96%E5%A2%99-%E4%B8%93%E5%AE%B6%E6%8C%87%E9%81%BF%E9%9B%B7%E8%AE%BE%E6%96%BD%E9%9D%9E%E7%99%BE%E5%88%86%E7%99%BE%E4%BF%9D%E9%9A%9C)
  ```香港昨(1日)晨在雷电交加之际，一个公共屋村单位竟被闪电击中，单位外的石檐篷一角亦有崩缺，单位内无人受伤，但户内人员均受惊吓。管理公屋的房屋署表示，已检查该屋村的避雷设施，并无问题；天文台官员则指出，闪电击中位置有随机性，避雷针并非百分百保障。```0
-  ## 6/2/2023 - [欧盟将与中亚五国举行第二次峰会](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230602-%E6%AC%A7%E7%9B%9F%E4%B8%8E%E4%B8%AD%E4%BA%9A%E4%BA%94%E5%9B%BD%E4%B8%BE%E8%A1%8C%E7%AC%AC%E4%BA%8C%E6%AC%A1%E5%B3%B0%E4%BC%9A)
+  ## 6/2/2023 - [欧盟将与中亚五国举行第二次峰会  呼吁建立“真诚的伙伴关系”](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230602-%E6%AC%A7%E7%9B%9F%E4%B8%8E%E4%B8%AD%E4%BA%9A%E4%BA%94%E5%9B%BD%E4%B8%BE%E8%A1%8C%E7%AC%AC%E4%BA%8C%E6%AC%A1%E5%B3%B0%E4%BC%9A)
  ```欧洲理事会主席查尔斯-米歇尔周五抵达吉尔吉斯斯坦，参加欧盟（EU）与中亚地区的第二次峰会，在俄罗斯衰弱的背景下，中亚地区正受到大国的热烈追捧，欧盟已经是该地区最大的捐助方。```0
   ## 6/2/2023 - [金砖峰会上不逮捕普京？南非打模糊牌](https://www.rfi.fr/cn/%E9%9D%9E%E6%B4%B2/20230602-%E9%87%91%E7%A0%96%E5%B3%B0%E4%BC%9A%E4%B8%8A%E4%B8%8D%E9%80%AE%E6%8D%95%E6%99%AE%E4%BA%AC-%E5%8D%97%E9%9D%9E%E6%89%93%E6%A8%A1%E7%B3%8A%E7%89%8C)
  ```由南非轮值主席主办的金砖集团峰会还有两个月时间召开，南非要不要执行国际刑事法庭对俄罗斯总统普京已经发出的国际逮捕令，仍然是一个未决问题。南非连续两天召开外长会议，为峰会敲定程序，也为应该与否豁免普京做出讨论。会议昨天结束，南非似乎仍然没有做出决断，以模糊牌回应外界质询。```0
@@ -45,8 +49,6 @@
  ```美国国防部长奥斯汀（LloydAustin）周四在日本访问时再次呼吁，“欢迎任何机会”与中国军方领导人接触。他在东京出席记者会时表示，中方拒绝了由美方提出在周末新加坡香格里拉对话会期间举行两国防长会议的提议是“不幸的”。奥斯汀指出，双方持续缺乏沟通或将导致“一个可能非常、非常迅速地失去控制的事件”。```0
   ## 6/1/2023 - [法乌总统指示两国防长就培训乌克兰飞行员制定多国机制](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230601-%E6%B3%95%E4%B9%8C%E6%80%BB%E7%BB%9F%E6%8C%87%E7%A4%BA%E4%B8%A4%E5%9B%BD%E9%98%B2%E9%95%BF%E5%B0%B1%E5%9F%B9%E8%AE%AD%E4%B9%8C%E5%85%8B%E5%85%B0%E9%A3%9E%E8%A1%8C%E5%91%98%E5%88%B6%E5%AE%9A%E6%AD%A3%E5%BC%8F%E6%9C%BA%E5%88%B6)
  ```6月1日，法国总统马克龙（EmmanuelMacron）与乌克兰总统泽连斯基（VolodymyrZelenskyy）在摩尔多瓦出席第二届欧洲政治共同体（EPC）峰会期间举行了双边会晤。会后，两国领导人决定，法乌防长将就培训乌克兰飞行员和技术人员的有关事宜展开磋商，并于下一次的乌克兰防务问题国际联络小组会议上提出正式框架和机制，与其他将对乌提供相关培训的国家协商，作出共同决定。```0
-  ## 6/1/2023 - [在中国，镇压越来越严厉了，甚至到了荒谬的程度](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E4%B8%96%E7%95%8C%E6%8A%A5/20230601-%E5%9C%A8%E4%B8%AD%E5%9B%BD%EF%BC%8C%E9%95%87%E5%8E%8B%E8%B6%8A%E6%9D%A5%E8%B6%8A%E4%B8%A5%E5%8E%89%E4%BA%86%EF%BC%8C%E7%94%9A%E8%87%B3%E5%88%B0%E4%BA%86%E8%8D%92%E8%B0%AC%E7%9A%84%E7%A8%8B%E5%BA%A6)
- ```法国世界报周四发表文章指出，在中国，镇压越来越严厉了。该报北京通讯员勒梅特（FrédéricLemaître）撰写的文章表示，在中国，人权捍卫者们面临着极其严厉的监狱徒刑。即使是很普通的喜剧演员，也因当局的打压而付出代价。```0
   ## 6/1/2023 - [法国参议院通过动议案，禁止进口维吾尔人强迫劳动产品](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20230601-%E6%B3%95%E5%9B%BD%E5%8F%82%E8%AE%AE%E9%99%A2%E9%80%9A%E8%BF%87%E5%8A%A8%E8%AE%AE%E6%A1%88%EF%BC%8C%E7%A6%81%E6%AD%A2%E8%BF%9B%E5%8F%A3%E7%BB%B4%E5%90%BE%E5%B0%94%E4%BA%BA%E5%BC%BA%E8%BF%AB%E5%8A%B3%E5%8A%A8%E4%BA%A7%E5%93%81)
  ```法新社报道，法国参议院6月1日星期四通过了一项动议案，要求禁止进口由中国的维吾尔人通过强迫劳动生产出的产品。```0
   ## 6/1/2023 - [加皇家骑警称已关闭与“中国警察站”有关的“非法警务活动”](https://www.rfi.fr/cn/%E7%BB%8F%E8%B4%B8/20230601-%E5%8A%A0%E7%9A%87%E5%AE%B6%E9%AA%91%E8%AD%A6%E7%A7%B0%E5%B7%B2%E5%85%B3%E9%97%AD%E4%B8%8E-%E4%B8%AD%E5%9B%BD%E8%AD%A6%E5%AF%9F%E7%AB%99-%E6%9C%89%E5%85%B3%E7%9A%84-%E9%9D%9E%E6%B3%95%E8%AD%A6%E5%8A%A1%E6%B4%BB%E5%8A%A8)
@@ -57,5 +59,3 @@
  ```台湾与美国双方6月1日于华盛顿的美国在台协会（AIT）总部签署美台"21世纪贸易倡议"首批协定。台湾总统蔡英文表示，期待未来台美建立更紧密伙伴关系。台湾经贸办称，这项协定为台美经贸打下坚实的法律基础，未来极有机会发展为更广泛的自由贸易协定，且有助于台湾参加跨太平洋伙伴全面进步协定（CPTPP）。```0
   ## 6/1/2023 - [泽连斯基强烈要求加入北约欧盟 马克龙：北约应给予乌克兰安全保证](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230601-%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%E5%BC%BA%E7%83%88%E8%A6%81%E6%B1%82%E5%8A%A0%E5%85%A5%E5%8C%97%E7%BA%A6%E6%AC%A7%E7%9B%9F-%E9%A9%AC%E5%85%8B%E9%BE%99-%E5%8C%97%E7%BA%A6%E5%BA%94%E7%BB%99%E4%BA%88%E4%B9%8C%E5%85%8B%E5%85%B0%E5%AE%89%E5%85%A8%E4%BF%9D%E8%AF%81)
  ```乌克兰总统泽连斯基周四(6月1日）在摩尔多瓦举行的欧洲政治共同体峰会上敦促欧洲加强对乌克兰的支持，并表达乌克兰加入北约及欧盟的强烈愿望；法国总统马克龙表示，北约应给予乌克兰安全保证及明确的愿景。```0
-  ## 6/1/2023 - [拜登：瑞典将很快加入北约，这将发生我向你们保证](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230601-%E6%8B%9C%E7%99%BB-%E7%91%9E%E5%85%B8%E5%B0%86%E5%BE%88%E5%BF%AB%E5%8A%A0%E5%85%A5%E5%8C%97%E7%BA%A6%EF%BC%8C%E8%BF%99%E5%B0%86%E5%8F%91%E7%94%9F%E6%88%91%E5%90%91%E4%BD%A0%E4%BB%AC%E4%BF%9D%E8%AF%81)
- ```美国总统拜登（JoeBiden）6月1日出席了美国空军学院毕业典礼，并发表讲话。他在讲话中表示：“北约比几十年来更加充满活力和团结，随着我们最新的盟友芬兰的加入它更加强大。而瑞典将尽快加入联盟”。拜登向台下的听众承诺，“这将发生。我向你们保证”。值得一提的是，他在典礼上向学员颁发最后一张毕业证书后，离开讲台时突然倒地。白宫方面称，拜登本人没事。```0
