--- a/新闻/自由亚洲电台.md
+++ b/新闻/自由亚洲电台.md
@@ -1,4 +1,14 @@
 
+  ## 6/2/2023 - [六四事件34周年  人权组织敦促中国政府承认屠城责任](https://www.rfa.org/mandarin/Xinwen/5-06022023115605.html)
+ ```总部位于美国纽约的国际人权组织人权观察在六四事件34周年前夕发表声明，敦促中国政府承认大规模杀害民主运动示威者的责任，并为死难者及其家属提供赔偿。声明指出，当全球民众悼念1989年北京六四屠杀之际，中国当局正日益积极抹消相关记忆，并从六四周年的几星期前就开始防堵民间悼念。各地维权人士和六四死难者亲属团体“天安门母亲”的成员，均遭限制行动与对外联系。而中国政府从未承认对屠杀负责，也从未追究任何官员的法律责任，既无意调查相关事件，也不愿公布被杀死、杀伤、强迫失踪或入狱者的资料。人权观察表示，对六四屠杀及其后续镇压缺乏长期一致的国际应对，是导致北京当局日益明目张胆侵犯人权的因素之一。作为多部国际人权条约缔约国以及联合国人权理事会现任成员，中国有义务“维护人权的最高标准”。人权观察敦促中国政府尊重言论、结社自由与和平集会的权利，停止对质疑六四屠杀官方说法的人士加以骚扰和任意拘留；向“天安门母亲”成员道歉，公布所有死难者名单，并向死难者家属提供赔偿；批准对六四及后续事件进行公开独立调查，并迅速公布调查结果与结论；允许涉及八九民运而流亡海外的中国公民不受阻碍返国；以及调查所有参与策划或下令对示威群众非法使用致命武力的政府与军方官员，并予以起诉。责编：何平```0
+  ## 6/2/2023 - [《华尔街日报》：美国在亚洲建立前哨基地应对中国导弹威胁](https://www.rfa.org/mandarin/Xinwen/4-06022023114919.html)
+ ```据美国《华尔街日报》6月2日报道，为应对来自中国不断增大的军事挑战，美国已在亚洲采取新的军事策略，包括增多前哨基地，以摆脱对大型军事基地的严重依赖。这个周末，由多国国防部长出席的香格里拉对话会将拉开帷幕，中国日益增强的军力和美国在亚洲的军事存在预计将成为会议的主题之一。而中国日前拒绝了美国提出的有关两国防长在会议期间举行会晤的要求。报道说，随着中国导弹库日渐扩大，技术越发先进，美军在亚洲的大型基地日益面临危险。而通过将武器装备、部队和指挥所分散到较小的前哨基地，美国希望使中国更难通过削弱任何单一军事设施来发动打击。根据五角大楼估算，中国现有超过1300枚弹道导弹可用于打击亚太地区目标，其中超过250枚可打到美国在关岛的主要军事基地。责编：何平```0
+  ## 6/2/2023 - [中国部分民航班机偏航金门   台军方：因天气影响](https://www.rfa.org/mandarin/Xinwen/3-06022023114332.html)
+ ```据台湾中央社6月2日报道，台湾军方当天中午监测发现，中国部分民航班机有向金门附近空域偏航的状况。台湾的国防部发布新闻稿指出，国军监侦单位中午发现大陆东南沿海民航班机有部分偏航状况，即与民航单位查证，获悉上海飞航情报区已告知台湾民航单位，受天气因素影响，部分民航班机将向金门附近空域偏航。台湾军方表示，将持续与民航单位协同密切监控，确保台湾的空防安全。责编：何平```0
+  ## 6/2/2023 - [维权网发布《中国大陆在押政治犯、良心犯月度报告》 涉1563人](https://www.rfa.org/mandarin/Xinwen/2-06022023114004.html)
+ ```维权网本周三（5月31日）发布《中国大陆在押政治犯、良心犯月度报告》。报告通过实名统计，由死刑正在核准、死缓、无期徒刑至有期徒刑、刑期不详及羁押未判等进行统计，共涉及汉、藏、维、哈萨克、回、蒙古、朝鲜、满等多族裔政治犯和良心犯1563人。报告特别指出，著名人权捍卫者郭飞雄（本名杨茂东）5月11日被广州市中级法院判处有期徒刑8年，剥夺政治权利3年。郭飞雄本次入狱是因要求赴美照顾病危妻子。与此同时，香港居民覃秋艳（妮可）因参与南方公民行动、香港“反送中”运动和公民聚会等，目前获悉于2021年4月遭广西柳州市警方拘捕后，目前已被判刑6年。此外，武汉公民记者方斌遭当局秘密判刑3年后，于4月30日刑满获释，但并未获得完全自由。广州南方街头运动倡导者之一王爱忠5月18日被广州市天河区法院以“寻衅滋事罪”判刑3年。报告还指出，中共当局针对法轮功的残酷镇压仍在持续，但法轮功学员的反抗也依然一如既往、毫不畏惧，法轮功学员也是该报告每月收集到遭当局判刑数量最大的群体。维权网强调，一个国家的政治犯和良心犯的境况是其最重要的人权指标之一，该报告通过定期统计和发布最新信息，揭示中国大陆当下恶劣的人权概况与良心犯、政治犯的悲惨处境，力求唤起国际社会对中国在押政治犯和良心犯的记忆，并予以持续不断的关注和呼吁，直至他们获得自由。编辑：何平```0
+  ## 6/2/2023 - [余文生妻子许艳被加控“煽动颠覆”后   看守所拒绝律师会见](https://www.rfa.org/mandarin/Xinwen/1-06022023113611.html)
+ ```据中国民间权益组织民生观察6月1日发布的消息，人权律师余文生的妻子许艳近日被北京市公安局石景山分局加控“煽动颠覆国家政权”等新罪名后，律师提前一天预约会见，但被看守所以公安临时提讯为由拒绝。此前有知情人士向本台透露，许艳被加控“煽颠”的罪名性质远比所谓的“寻衅滋事”严重，许艳也是第一位被当局抓捕并被追究刑事责任的“709大抓捕”案件受害律师家属。据悉，余文生、许艳夫妇在4月13日应邀前往欧盟驻京使馆途中，在搭乘地铁时被4名身穿便衣的国保人员拦截。其中一名国保宣称，要对他们进行口头传唤。两天后，多名警察前往余文生住处搜查，并向他刚满18岁的儿子宣读了俩人的刑事拘留通知书。民生观察披露，余文生、许艳俩人被批捕可能与声援遭重判的许志永和丁家喜有关，目前一些人权律师已被当局警告不能代理该案。责编：何平```0
   ## 6/1/2023 - [美媒曝TikTok用户资料存在中国　参议员要求司法部调查周受资作伪证](https://www.rfa.org/mandarin/Xinwen/10-06012023162037.html)
  ```美国《富比世》（Forbes）杂志6月1日披露，美国共和党籍参议员卢比奥（MarcoRubio）已要求司法部长，调查TikTok首席执行官周受资日前在国会作证时，回应该公司处理美国用户数据方式时是否作伪证。前一日《富比世》杂志披露，TikTok将全球用户最敏感的财务资料存在中国伺服器内，而且可在当地读取。这个发现与周受资日前在国会作证的说法互相矛盾。周受资3月在美国国会作证时说，美国方面的资料一向存在维吉尼亚州和新加坡，取用这些资料是根据其全球工程师所提需求进行。根据报道，卢比奥在给司法部长的一封信中写道，现在知道TikTok在中国存储了有关美国用户的敏感信息，而周受资否认了这一事实，周受资“应该为与TikTok运营相关的重要事实做出虚假陈述而承担责任”，因此卢比奥请求司法部调查周受资对于美国用户个资的存储情况作证时，是否有作伪证的情形。《富比世》综合多个消息来源、TikTok内部通信纪录、以及所取得的机密文件得出结论，数以千计TikTok全球创作者和公司用户将敏感的社会安全码、税务识别码等财务资料提供给该公司，以便依照流量获得平台支付的收入。但是许多人不知道，TikTok将这些个人财务资料存在位于中国的伺服器，可被当地员工取用。TikTok和其母公司字节跳动没有回应《富比世》就卢比奥呼吁司法部调查的置评请求，在此之前，TikTok发言人在一份声明中，对《富比世》报道用户资料存储于中国一事回应：“我们对于周受资证词的正确性有信心。”TikTok过去一年来不断宣扬其耗资15亿美元的“德州计划”（ProjectTexas），将美国用户资料保存于美国维州和新加坡等地，确保不会流到中国，该倡议已经成为与美国拜登政府协商重点。责编：陈品洁```0
   ## 6/1/2023 - [中国博主“编程随想”妻子传失联](https://www.rfa.org/mandarin/Xinwen/9-06012023161904.html)
@@ -19,13 +29,3 @@
  ```近日前往中国访问的特斯拉执行长马斯克（ElonMusk），当地时间5月31日下午在北京与中国国务院副总理丁薛祥会面，路透社表示消息人士拒绝提供双方的谈话细节，而特斯拉与中国国新办也未回应路透社置评请求。路透社指，这应是丁薛祥首次与外企执行长进行一对一会谈，显示出中国重视与特斯拉之间的关系。马斯克在与丁薛祥会面之前，先后与中国国务委员兼外交部长秦刚、商务部长王文涛、工业和信息化部长金壮龙等部委首长会面。根据中国发布的声明，马斯克在与秦刚会面时表示，特斯拉公司反对美中“脱钩断链”；会面王文涛时也赞同美中关系不是“零和博弈”。根据特斯拉对外事务副总裁在微博的发文，马斯克在离开的前一晚参观特斯拉位于上海郊区的工厂并会见员工。此外，他也与上海市委书记陈吉宁会面，陈吉宁欢迎特斯拉前往上海投资。根据法新社消息，马斯克已于6月1日离开中国。 责编：陈品洁```0
   ## 6/1/2023 - [美台21世纪贸易倡议签署首批协定　中国外交部坚决反对](https://www.rfa.org/mandarin/Xinwen/1-06012023121749.html)
  ```美国与台湾在６月１日正式签署“美台21世纪贸易倡议”首批协定，将由美国在台协会执行理事蓝莺（IngridLarson）与台湾驻美代表萧美琴代表签署。根据美国贸易代表办公室（USTR）预告，美国贸易代表办公室主管亚洲事务的副代表莎拉·比安奇（SarahBianchi）将会出席见证仪式，台湾行政院政务委员邓振中也会出席。根据台湾行政院新闻稿，邓振中在协定签署后表示，美台所签署之贸易协定，是自1979年以来双方之间最具规模、最全面性的贸易谈判，所达成的阶段性成果，标帜著美台经贸关系历史性的里程碑，也为台湾和主要贸易国洽签贸易协定迈出了关键一步。美国贸易代表办公室发言人在一份声明中说：“我们感谢台湾合作伙伴，帮助我们达到这一个重要里程碑，并期待未来就该倡议谈判授权中规定的其他贸易领域进行谈判。”对此，中国外交部再度表示坚决反对，中国外交部发言人毛宁６月１日在例行记者会上，要求美方不得与台湾商签具有主权意涵和官方性质的协定，不得藉经贸名义向“台独”分裂势力“发出任何错误信号”，指美方有关行径严重违反“一个中国原则”和“中美三个联合公报”规定，也违背美方自己作出的仅同台湾保持非官方关系的承诺。美国贸易代表戴琪（KatherineTai）5月18日曾表示，美台21世纪贸易倡议已完成谈判，双方预计数周内将针对贸易便捷化、中小企业、反贪腐等5项议题，签署首批协定。 责编：陈品洁```0
-  ## Invalid Date - [西藏前政治犯：西藏是世界上最大的监狱新冠疫情“二阳”感染潮引发警惕中国因安全考量暂停打造海上核电厂计划布林肯称美欧对华立场趋于一致　呼吁中国对话美跨党派参议员提法案追究中共对维吾尔种族灭绝责任](https://www.rfa.org/mandarin/Xinwen/10-05312023155824.htmlhttps://www.rfa.org/mandarin/Xinwen/9-05312023154944.htmlhttps://www.rfa.org/mandarin/Xinwen/8-05312023154327.htmlhttps://www.rfa.org/mandarin/Xinwen/7-05312023135053.htmlhttps://www.rfa.org/mandarin/Xinwen/6-05312023134004.html)
- ```西藏前政治犯顿珠旺青近日受邀访问日本，展开“西藏议题”游说活动及宣传他制作的西藏纪录片《远离恐惧》。根据总部在挪威奥斯陆的“西藏之声”报道，顿珠旺青5月26日在日本的一场记者会上表示，迄今为止西藏是世界上最大的监狱，藏人没有言论和结社自由。此外他补充，自习近平成为中国国家领导人以来，西藏宗教文化面临着被消灭的危险。报道指，顿珠旺青在记者会上叙述他在2008年因为拍摄《远离恐惧》，而遭到中国当局抓捕的遭遇。这是一部有关藏人对北京夏季奥运会看法的影片。本台此前报道，当时他因为拍摄这部纪录片，被当局以“颠覆国家政权”罪名判刑6年。此外顿珠旺青也在记者会上介绍境内藏人面临的恶劣人权状况，他表示，中共当局强迫藏人孩子进入寄宿学校接受汉语教育。另外近年来北京政府在藏区有计划性地实行搬迁政策，并以建设为由在西藏各地破坏生态环境，当局还禁止未满十八岁的藏人进入寺院接触西藏宗教文化。责编：陈品洁Wed,31May202316:04:00-0400新冠疫情“二阳”感染潮引发警惕https://www.rfa.org/mandarin/Xinwen/9-05312023154944.htmlhttps://www.rfa.org/mandarin/Xinwen/9-05312023154944.html北京一处药房的清热解毒药物柜上几乎全空，工作人员正设法提供药物帮助民众应对新冠病毒感染高峰。摄于2022年12月13日。美联社资料图片在结束“清零”防疫政策大约半年之后，中国境内出现新一波新冠病毒感染高峰，“二阳”人数不断上升，也跃居互联网讨论热点。中国官媒新华社引述复旦大学附属中山医院感染病科主任胡必杰的话说，最近发热门诊接诊量相比一个月前有所增加，但绝大部分是轻症。即使如此，微博上仍有网民哀号“二阳”的症状让他们吃不消，包括浑身酸痛、头痛、发烧、咳嗽流鼻涕打喷嚏等症状样样来。本台曾报道，中国科学院士钟南山曾表示，目前有两种专门针对XBB的疫苗即将通过评审上市，但是具体上市日期尚未公布。此外根据路透社报道，美国生物制药巨头莫德纳已经于5月24日在中国注册了一家生物科技公司，莫德纳公司一名发言人在回复路透社相关询问时表示，正在寻求进入中国市场的机会，“希望能够将莫德纳的mRNA疫苗的力量带给中国人民。”责编：陈品洁Wed,31May202315:57:00-0400中国因安全考量暂停打造海上核电厂计划香港媒体《南华早报》周三报道，中国政府出于安全考虑，暂停在南海建造浮动核电厂的计划。随著施工准备工作开始，中国监管机构尚未批准建造该国第一座浮动核电站。https://www.rfa.org/mandarin/Xinwen/8-05312023154327.htmlhttps://www.rfa.org/mandarin/Xinwen/8-05312023154327.html国营的中国核工业集团有限公司所展示的，外貌类似油轮的浮动核电厂模型。美联社资料图片香港媒体《南华早报》周三报道，中国政府出于安全考虑，暂停在南海建造浮动核电厂的计划。随著施工准备工作开始，中国监管机构尚未批准建造该国第一座浮动核电站。中国国家能源海洋核动力平台技术研发中心资深工程师王东辉领导的研究团队指出，海上漂浮核电站具备诸多的优点，并且辟建的技术也已全然成熟，“中国核工业集团有限公司与中国船舶集团有限公司共同致力研发，但是中国首个漂浮核电站的示范工程建设尚未得到批准。”王东辉和同僚在中国期刊《核动力工程》5月25日刊载的一份报告指出：“安全和可行性仍是当局的主要关切。”《南华早报》的报道指出，由于普遍的认知是海上漂浮核电厂比陆地核电厂安全，也较容易被当地政府和民众接受，因此中国当局这项决策令执行这项计画的科学家深感讶异。该海上漂浮核电厂的原先的计划是将供电给中国的离岛，以及至关重要的海洋基础设施，包括在与邻国有争议性岛屿上的相关基础设施。 责编：陈品洁Wed,31May202315:48:00-0400布林肯称美欧对华立场趋于一致　呼吁中国对话美国国务卿布林肯（AnthonyBlinken）日前在瑞典出席美国与欧盟贸易和技术委员会会议，他表示，美国和欧洲的对华政策立场趋于一致，欧盟最近发表的声明与美国的政策十分吻合。https://www.rfa.org/mandarin/Xinwen/7-05312023135053.htmlhttps://www.rfa.org/mandarin/Xinwen/7-05312023135053.html美国国务卿布林肯（AnthonyBlinken）美联社图片美国国务卿布林肯（AnthonyBlinken）日前在瑞典出席美国与欧盟贸易和技术委员会会议，他表示，美国和欧洲的对华政策立场趋于一致，欧盟最近发表的声明与美国的政策十分吻合。布林肯指出，美国与欧盟在对中国的看法越来越相近，都不想与中国对抗，亦没有寻求与中国脱钩，而是专注降低风险，美欧都能从对华贸易及投资中获益。根据美国与欧盟贸易和技术委员会的会后声明，美欧承诺将共同对抗中国的非市场经济行为，指中国在医疗器械行业的政策，对欧美工人造成不利，美欧正探索可能的其他协调行动。此外，声明也关注外国操纵及干扰信息，以及散播虚假信息，尤其是在俄罗斯入侵乌克兰问题上，中国放大俄罗斯虚假信息叙述的做法十分危险。此外，布林肯也将中国战机在南海上空拦截美国侦察机一事，归咎于中方飞行员，并借此呼吁北京当局加强沟通，也对中国政府拒绝与美国国防部长见面一事表达遗憾。责编：陈品洁Wed,31May202313:51:00-0400美跨党派参议员提法案追究中共对维吾尔种族灭绝责任https://www.rfa.org/mandarin/Xinwen/6-05312023134004.htmlhttps://www.rfa.org/mandarin/Xinwen/6-05312023134004.html参议院外委会成员，共和党籍参议员卢比奥（MarcoRubio）(图右)和默克利（JeffMerkley）。法新社资料图片/RFA合成美国跨党派参议员5月31日提出“维吾尔种族灭绝问责和制裁法案”（UyghurGenocideAccountabilityandSanctionsAct），旨在对抗中国在新疆对维吾尔人进行的种族灭绝行为。这项法案由参议院外委会成员，共和党籍参议员卢比奥（MarcoRubio）和默克利（JeffMerkley）共同提出。该法案除了扩大对中国相关官员的制裁和旅行限制外，还将授权美国国务院和美国国际开发署向种族灭绝受害者提供援助，允许它们倡议以对抗中国对于种族灭绝行为的政治宣传，促进保护受中共压制的文化和语言遗产，并要求向美国证券交易委员会披露，那些直接或间接参与支持中共在新疆种族灭绝活动的实体。卢比奥在一份声明中说，这项法案能在现行立法的基础上，让中国共产党对维吾尔人的持续暴行，以及提供相关援助的企业，进行更多制裁。随著北京继续对非汉人群体进行压迫，美国必须坚持对实施种族灭绝行为的中国当局和公司实施制裁。默克利也表示，这个法案能采取更多措施追究中共对暴行的责任，同时采取行动保护种族灭绝受害者的关键一步。 责编：陈品洁Wed,31May202313:47:42-0400美国国务卿布林肯（AnthonyBlinken）日前在瑞典出席美国与欧盟贸易和技术委员会会议，他表示，美国和欧洲的对华政策立场趋于一致，欧盟最近发表的声明与美国的政策十分吻合。布林肯指出，美国与欧盟在对中国的看法越来越相近，都不想与中国对抗，亦没有寻求与中国脱钩，而是专注降低风险，美欧都能从对华贸易及投资中获益。根据美国与欧盟贸易和技术委员会的会后声明，美欧承诺将共同对抗中国的非市场经济行为，指中国在医疗器械行业的政策，对欧美工人造成不利，美欧正探索可能的其他协调行动。此外，声明也关注外国操纵及干扰信息，以及散播虚假信息，尤其是在俄罗斯入侵乌克兰问题上，中国放大俄罗斯虚假信息叙述的做法十分危险。此外，布林肯也将中国战机在南海上空拦截美国侦察机一事，归咎于中方飞行员，并借此呼吁北京当局加强沟通，也对中国政府拒绝与美国国防部长见面一事表达遗憾。责编：陈品洁美国跨党派参议员5月31日提出“维吾尔种族灭绝问责和制裁法案”（UyghurGenocideAccountabilityandSanctionsAct），旨在对抗中国在新疆对维吾尔人进行的种族灭绝行为。这项法案由参议院外委会成员，共和党籍参议员卢比奥（MarcoRubio）和默克利（JeffMerkley）共同提出。该法案除了扩大对中国相关官员的制裁和旅行限制外，还将授权美国国务院和美国国际开发署向种族灭绝受害者提供援助，允许它们倡议以对抗中国对于种族灭绝行为的政治宣传，促进保护受中共压制的文化和语言遗产，并要求向美国证券交易委员会披露，那些直接或间接参与支持中共在新疆种族灭绝活动的实体。卢比奥在一份声明中说，这项法案能在现行立法的基础上，让中国共产党对维吾尔人的持续暴行，以及提供相关援助的企业，进行更多制裁。随著北京继续对非汉人群体进行压迫，美国必须坚持对实施种族灭绝行为的中国当局和公司实施制裁。默克利也表示，这个法案能采取更多措施追究中共对暴行的责任，同时采取行动保护种族灭绝受害者的关键一步。 责编：陈品洁```0
-  ## Invalid Date - [新冠疫情“二阳”感染潮引发警惕](https://www.rfa.org/mandarin/Xinwen/9-05312023154944.html)
- ``````0
-  ## Invalid Date - [中国因安全考量暂停打造海上核电厂计划](https://www.rfa.org/mandarin/Xinwen/8-05312023154327.html)
- ``````0
-  ## 5/31/2023 - [布林肯称美欧对华立场趋于一致　呼吁中国对话](https://www.rfa.org/mandarin/Xinwen/7-05312023135053.html)
- ```美国国务卿布林肯（AnthonyBlinken）日前在瑞典出席美国与欧盟贸易和技术委员会会议，他表示，美国和欧洲的对华政策立场趋于一致，欧盟最近发表的声明与美国的政策十分吻合。布林肯指出，美国与欧盟在对中国的看法越来越相近，都不想与中国对抗，亦没有寻求与中国脱钩，而是专注降低风险，美欧都能从对华贸易及投资中获益。根据美国与欧盟贸易和技术委员会的会后声明，美欧承诺将共同对抗中国的非市场经济行为，指中国在医疗器械行业的政策，对欧美工人造成不利，美欧正探索可能的其他协调行动。此外，声明也关注外国操纵及干扰信息，以及散播虚假信息，尤其是在俄罗斯入侵乌克兰问题上，中国放大俄罗斯虚假信息叙述的做法十分危险。此外，布林肯也将中国战机在南海上空拦截美国侦察机一事，归咎于中方飞行员，并借此呼吁北京当局加强沟通，也对中国政府拒绝与美国国防部长见面一事表达遗憾。责编：陈品洁```0
-  ## 5/31/2023 - [美跨党派参议员提法案追究中共对维吾尔种族灭绝责任](https://www.rfa.org/mandarin/Xinwen/6-05312023134004.html)
- ```美国跨党派参议员5月31日提出“维吾尔种族灭绝问责和制裁法案”（UyghurGenocideAccountabilityandSanctionsAct），旨在对抗中国在新疆对维吾尔人进行的种族灭绝行为。这项法案由参议院外委会成员，共和党籍参议员卢比奥（MarcoRubio）和默克利（JeffMerkley）共同提出。该法案除了扩大对中国相关官员的制裁和旅行限制外，还将授权美国国务院和美国国际开发署向种族灭绝受害者提供援助，允许它们倡议以对抗中国对于种族灭绝行为的政治宣传，促进保护受中共压制的文化和语言遗产，并要求向美国证券交易委员会披露，那些直接或间接参与支持中共在新疆种族灭绝活动的实体。卢比奥在一份声明中说，这项法案能在现行立法的基础上，让中国共产党对维吾尔人的持续暴行，以及提供相关援助的企业，进行更多制裁。随著北京继续对非汉人群体进行压迫，美国必须坚持对实施种族灭绝行为的中国当局和公司实施制裁。默克利也表示，这个法案能采取更多措施追究中共对暴行的责任，同时采取行动保护种族灭绝受害者的关键一步。 责编：陈品洁```0
