--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,16 @@
 
+  ## 6/2/2023 - [无功而返， 斡旋俄乌冲突的中国特使考虑第二次出访欧洲](https://www.voachinese.com/a/china-weighs-next-ukraine-peace-mission-after-first-yields-little-progress-20230602/7120028.html)
+ ```中国负责斡旋俄乌冲突的欧亚事务特使李辉星期五（6月2日）表示，虽然他最近对俄乌以及其他一些欧洲国家的访问并未产生立即的效果，但北京正在考虑新一轮的促和使命。```0
+  ## 6/2/2023 - [摩根大通CEO戴蒙敏感时期访台，台官方机构称没有会见安排
+
+
+
+](https://www.voachinese.com/a/jpmorgan-s-dimon-visits-taiwan-to-meet-staff-clients-20230602/7120017.html)
+ ```美国投行摩根大通首席执行官杰米·戴蒙在结束了他对中国大陆的访问之后于周五前往台湾访问。这是他十年来首次访问台湾。```0
+  ## 6/2/2023 - [政治红线下寻找悼念空间 香港前区议员派发蜡烛唤起港人六四回忆
+
+](https://www.voachinese.com/a/hong-kong-ex-democrat-politician-gives-out-candles-on-tiananmen-crackdown-anniversary-2-0230602/7120250.html)
+ ```在港版国安法和疫情的影响下，过去数年香港人无法自由悼念六四。近日港府官员更先后就悼念六四表态，强调港人的行为若不符合法律会果断执法。在大多数港人选择保持沉默的同时，香港一名前民主派区议员却在政治红线下以自己的方式唤起港人对六四的记忆。```0
   ## 6/2/2023 - [三十四年后再回首 六四学生“没想到”什么？](https://www.voachinese.com/a/tiananmen-massacre-student-leaders-recalling-what-surprised-them-20230602/7120197.html)
  ```由于中国共产党当局的信息封锁，中国许多年轻人不清楚甚至不知道，三十四年前的1989年6月4日，中共当局曾经出动军队对聚集在天安门广场的学生和市民抗议者进行了血腥镇压。当年的热血青年学生，如今也都白发斑斑。三十四年前和三十四年后，回首往事，他们最感到意外的是什么？```0
   ## 6/2/2023 - [六四周年将至，港人在国安法淫威下选择私下纪念
@@ -37,9 +49,3 @@
  ```乌克兰官员星期四(6月1日)说，俄罗斯拂晓前对乌克兰首都基辅的攻击至少造成九人死亡，包括一名九岁女童和她的母亲，还有16人受伤```0
   ## 6/1/2023 - [美财政部高官：正在制订有针对性的、范围狭窄的对外投资审查项目](https://www.voachinese.com/a/us-export-control-outbound-investment-review-china-20230601/7119354.html)
  ```美国财政部的一位高级官员5月31日在参议院作证时说，拜登政府正在专注于制定一个“有针对性的、范围狭窄的、可管理和易懂的”项目，对美国的对外投资进行审查。这个计划针对的是含带美国技术和专业知识的投资资金，行业包括先进半导体、人工智能和量子计算等。拜登政府有意发布一项行政命令，限制美国资本对中国高科技领域的投资，但直到现在拜登政府都没有提供有关的细节。```0
-  ## 6/1/2023 - [美国制裁伊斯兰革命卫队和圣城军的成员及附属机构](https://www.voachinese.com/a/washington-sanctions-iranian-operatives-accused-of-assassination-plots-abroad-20230601/7119214.html)
- ```美国周四(6月1日)对伊朗伊斯兰革命卫队(IslamicRevolutionaryGuardCorps)及其外部行动部门圣城军(IRGC-QudsForce)的成员和附属机构实施制裁，华盛顿指控他们参与了针对前美国政府官员和包括记者在内的伊朗持不同政见者的恐怖主义阴谋。```0
-  ## 6/1/2023 - [中刚矿业协议是否会重组仍不确定](https://www.voachinese.com/a/whether-a-drc-china-mining-deal-will-be-restructured-remains-uncertain-/7119248.html)
- ```分析人士在非洲国家领导人上周访问北京后表示，刚果（金）总统费利克斯·齐塞克迪（FelixTshisekedi）要兑现在12月选举之前彻底改革他所说的与中国不公平的矿产换基础设施协议的承诺，将会面临一场艰苦的斗争。刚果（金）这个资源丰富但饱受冲突困扰的国家在12月份将要举行大选。```0
-  ## 6/1/2023 - [僧多粥少：中国一千多万应届大学毕业生就业前景惨淡](https://www.voachinese.com/a/china-s-11-6m-graduates-face-a-jobs-market-with-no-jobs-20230601/7118431.html)
- ```随着中国16至24岁青年人的失业率今年4月达到创纪录的20.4%，今年即将毕业的1158万名大学毕业生将面临一个越来越严峻的就业市场，或“一个没有职位的就业市场”。```0
