--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,8 @@
 
+  ## 6/2/2023 - [中情局长伯恩斯五月曾密访中国，在高层沟通不畅情况下试图改善关系
+
+ ](https://www.voachinese.com/a/cia-chief-made-secret-visit-to-china-in-bid-to-thaw-relations-20230602/7120284.html)
+ ```美国中央情报局长威廉·伯恩斯（WilliamBurns）上个月曾经秘密前往中国访问，并与中方官员举行会谈。在美中高层沟通不畅的情况下，拜登总统派遣他最信赖的高层官员之一访问中国，表明了美国政府对美中关系急剧恶化的严重关切。```0
   ## 6/2/2023 - [无功而返， 斡旋俄乌冲突的中国特使考虑第二次出访欧洲](https://www.voachinese.com/a/china-weighs-next-ukraine-peace-mission-after-first-yields-little-progress-20230602/7120028.html)
  ```中国负责斡旋俄乌冲突的欧亚事务特使李辉星期五（6月2日）表示，虽然他最近对俄乌以及其他一些欧洲国家的访问并未产生立即的效果，但北京正在考虑新一轮的促和使命。```0
   ## 6/2/2023 - [摩根大通CEO戴蒙敏感时期访台，台官方机构称没有会见安排
@@ -47,5 +51,3 @@
  ```六四事件34周年前夕，一部以天安门母亲为主角的香港舞台剧《5月35日》自6月2日起一连在台北演出6场。台湾主演剧团创办人钟伯渊说，该剧反映的是中共如何在这34年来抹灭和洗白有关六四的记忆。他希望透过这出在中国和香港都禁演的舞台剧，来缅怀六四精神，更让观众认清，中共政权对人权的威胁不分对象，无所不在。```0
   ## 6/1/2023 - [俄罗斯导弹袭击基辅并造成伤亡](https://www.voachinese.com/a/deadly-russian-missile-attack-hits-kyiv-20230601/7119358.html)
  ```乌克兰官员星期四(6月1日)说，俄罗斯拂晓前对乌克兰首都基辅的攻击至少造成九人死亡，包括一名九岁女童和她的母亲，还有16人受伤```0
-  ## 6/1/2023 - [美财政部高官：正在制订有针对性的、范围狭窄的对外投资审查项目](https://www.voachinese.com/a/us-export-control-outbound-investment-review-china-20230601/7119354.html)
- ```美国财政部的一位高级官员5月31日在参议院作证时说，拜登政府正在专注于制定一个“有针对性的、范围狭窄的、可管理和易懂的”项目，对美国的对外投资进行审查。这个计划针对的是含带美国技术和专业知识的投资资金，行业包括先进半导体、人工智能和量子计算等。拜登政府有意发布一项行政命令，限制美国资本对中国高科技领域的投资，但直到现在拜登政府都没有提供有关的细节。```0
