--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,6 @@
 
+  ## 6/2/2023 - [美中两军关系出现松动迹象：奥斯汀和李尚福在新加坡简短交谈](https://www.voachinese.com/a/us-chinese-defense-officials-talk-at-key-summit-20230602/7120243.html)
+ ```中国国防部部长李尚福周五（六月二日）与美国国防部长劳埃德·奥斯汀在新加坡进行了交谈，这或许意味着北京在多次拒绝美国的对话要求之后双方关系出现缓和。```0
   ## 6/2/2023 - [中情局长伯恩斯五月曾密访中国，在高层沟通不畅情况下试图改善关系
 
  ](https://www.voachinese.com/a/cia-chief-made-secret-visit-to-china-in-bid-to-thaw-relations-20230602/7120284.html)
@@ -49,5 +51,3 @@
  ```中国和美国正在将新的重点放在中亚的外交上，目前莫斯科在该地区的长期主导地位因其入侵乌克兰以及G7(七国集团)国家的制裁而削弱。```0
   ## 6/1/2023 - [香港舞台剧《5月35日》台北上演  缅怀六四 警惕中共人权恶行  ](https://www.voachinese.com/a/june-4th-project-taipei-puts-on-may-35th-play-to-remember-the-tiananmen-massacre/7119357.html)
  ```六四事件34周年前夕，一部以天安门母亲为主角的香港舞台剧《5月35日》自6月2日起一连在台北演出6场。台湾主演剧团创办人钟伯渊说，该剧反映的是中共如何在这34年来抹灭和洗白有关六四的记忆。他希望透过这出在中国和香港都禁演的舞台剧，来缅怀六四精神，更让观众认清，中共政权对人权的威胁不分对象，无所不在。```0
-  ## 6/1/2023 - [俄罗斯导弹袭击基辅并造成伤亡](https://www.voachinese.com/a/deadly-russian-missile-attack-hits-kyiv-20230601/7119358.html)
- ```乌克兰官员星期四(6月1日)说，俄罗斯拂晓前对乌克兰首都基辅的攻击至少造成九人死亡，包括一名九岁女童和她的母亲，还有16人受伤```0
