--- a/新闻/德国之声.md
+++ b/新闻/德国之声.md
@@ -1,4 +1,6 @@
 
+  ## 6/2/2023 - [六四紀念館紐約開幕 特設香港民運展區](https://www.dw.com/zh/六四紀念館紐約開幕-特設香港民運展區/a-65811714?maca=chi-rss-chi-all-1127-rdf)
+ ```由八九民運領袖籌辦的六四紀念館，正式在美國紐約開幕，展出34年前六四事件的歷史物品。香港曾經作為支援中國民運的集中地，今天也成為展館的一個特別元素。```0
   ## 6/2/2023 - [约翰·塞巴斯蒂安·巴赫:D小调托卡塔](https://www.dw.com/zh/约翰·塞巴斯蒂安·巴赫-d小调托卡塔/a-65809848?maca=chi-rss-chi-all-1127-rdf)
  ```D小调托卡塔是家约翰·塞巴斯蒂安·巴赫最脍炙人口的管风琴作品之一，热情奔放、气势宏大。```0
   ## 6/2/2023 - [德国向右转？选项党与社民党的支持率齐平](https://www.dw.com/zh/德国向右转？选项党与社民党的支持率齐平/a-65809300?maca=chi-rss-chi-all-1127-rdf)
@@ -35,8 +37,6 @@
  ```俄罗斯法院分别以未删除违禁药物内容和乌克兰战争信息而对WhatsApp和维基百科开出罚款。维基媒体此前曾表示，俄罗斯当局不满的信息来源良好，符合维基百科标准。```0
   ## 6/1/2023 - [乌克兰何时加盟？北约各国仍存在分歧](https://www.dw.com/zh/乌克兰何时加盟？北约各国仍存在分歧/a-65794083?maca=chi-rss-chi-all-1127-rdf)
  ```德国外长贝尔博克说：“北约的门户开放政策一如既往，但与此同时，战争还在进行之中，我们显然不能讨论接受新成员。”```0
-  ## 6/1/2023 - [李尚福签署备忘录 将与新加坡开设国防高层热线](https://www.dw.com/zh/李尚福签署备忘录-将与新加坡开设国防高层热线/a-65793874?maca=chi-rss-chi-all-1127-rdf)
- ```中国与新加坡周四为设立一条国防领导人热线电话奠定基础。新加坡是美国在亚洲的紧密伙伴国。此次备忘录签署正值北京部分暂停与华盛顿高层对话之际。```0
   ## 6/1/2023 - [2022年德国入籍人数创历史新高](https://www.dw.com/zh/2022年德国入籍人数创历史新高/a-65791823?maca=chi-rss-chi-all-1127-rdf)
  ```2022年，申请和获得德国国籍的人数创下过去20年的历史记录。这是一个好消息，因为德国政府希望吸引更多专业人才来到德国，并为此推动了国籍法改革。```0
   ## 6/1/2023 - [德国总理顾问访华：北京宣传，柏林沉默](https://www.dw.com/zh/德国总理顾问访华：北京宣传，柏林沉默/a-65791189?maca=chi-rss-chi-all-1127-rdf)
