--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,8 +1,8 @@
 
+  ## 6/2/2023 - [为阻止朝鲜开发核导弹，韩国强调要切断朝鲜资金链](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230602-%E4%B8%BA%E4%B8%BA%E9%98%BB%E6%AD%A2%E6%9C%9D%E9%B2%9C%E5%BC%80%E5%8F%91%E6%A0%B8%E5%AF%BC%E5%BC%B9%EF%BC%8C%E9%9F%A9%E5%9B%BD%E5%BC%BA%E8%B0%83%E8%A6%81%E5%88%87%E6%96%AD%E6%9C%9D%E9%B2%9C%E8%B5%84%E9%87%91%E9%93%BE)
+ ```在新加坡举行的第20届香格里拉对话会上韩国代表强调为阻止朝鲜核导弹开发进程，有必要切断朝鲜资金链。```0
   ## 6/2/2023 - [英国国防部长称乌克兰今年能夺回克里米亚](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230602-%E8%8B%B1%E5%9B%BD%E5%9B%BD%E9%98%B2%E9%83%A8%E9%95%BF%E7%A7%B0%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%8A%E5%B9%B4%E8%83%BD%E5%A4%BA%E5%9B%9E%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A)
  ```英国国防部长华莱士今天接受华盛顿邮报专访。该报称，与其他一些北约官员的私下沉思相反，华莱士表示，乌克兰确实有可能成功夺回克里米亚半岛。普京在2014年非法吞并克里米亚半岛，今年俄罗斯军队所需的设备均用完了。华莱士称，乌克兰可能不会今夏就加入北约，但各国与乌克兰签订双边或多边防御合作，也能提高保护乌克兰安全的高度。```0
-  ## 6/2/2023 - [台湾一男称特选六四纪念馆开馆日指控王丹9年前强奸他未遂并称坏如民进党 王丹驳斥](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E5%8F%B0%E6%B9%BE%E4%B8%80%E7%94%B7%E7%A7%B0%E7%89%B9%E9%80%89%E5%85%AD%E5%9B%9B%E7%BA%AA%E5%BF%B5%E9%A6%86%E5%BC%80%E9%A6%86%E6%97%A5%E6%8C%87%E6%8E%A7%E7%8E%8B%E4%B8%B99%E5%B9%B4%E5%89%8D%E5%BC%BA%E5%A5%B8%E4%BB%96%E6%9C%AA%E9%81%82%E5%B9%B6%E7%A7%B0%E5%9D%8F%E5%A6%82%E6%B0%91%E8%BF%9B%E5%85%9A-%E7%8E%8B%E4%B8%B9%E9%A9%B3%E6%96%A5)
- ```台湾前政治工作者李援军今天指控民运领袖王丹9年前邀他去美国，在纽约某家饭店强吻他、强暴未遂。王丹晚间回应表示，这位作者所说的“性骚”之事完全不存在，不会再回应。王丹并说，今天“六四纪念馆”正式开幕，请大家多多关注。```0
   ## 6/2/2023 - [金砖外长会议遭“轰炸”式问普京事 南非今斥责西方](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230602-%E9%87%91%E7%A0%96%E5%A4%96%E9%95%BF%E4%BC%9A%E8%AE%AE%E9%81%AD-%E8%BD%B0%E7%82%B8-%E5%BC%8F%E9%97%AE%E6%99%AE%E4%BA%AC%E4%BA%8B-%E5%8D%97%E9%9D%9E%E4%BB%8A%E6%96%A5%E8%B4%A3%E8%A5%BF%E6%96%B9)
  ```连续两天金砖集团外长会议会里会外聚焦普京与会会不会被南非执行国际刑事法庭通缉令而逮捕爆炸性问题。南非是国际刑事法院签约成员国，但也与俄罗斯关系良好。南非没有明确回应提问，但今天指控西方国家利用乌克兰战争搅局，怀了南非在内占据世界绝大多数人口希望在南非的金砖峰会讨论脱贫的最大愿望。```0
   ## 6/2/2023 - [香港不准点纪念六四烛光 海外显示延伸接力](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E9%A6%99%E6%B8%AF%E4%B8%8D%E5%87%86%E7%82%B9%E7%BA%AA%E5%BF%B5%E5%85%AD%E5%9B%9B%E7%83%9B%E5%85%89-%E6%B5%B7%E5%A4%96%E6%98%BE%E7%A4%BA%E5%BB%B6%E4%BC%B8%E6%8E%A5%E5%8A%9B)
