--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,8 @@
 
+  ## 6/2/2023 - [纪念六四事件34周年，CECC主席提名彭立发、张展、李康梦角逐诺贝尔和平奖](https://www.voachinese.com/a/us-cecc-china-tiananmen-34th-anniversary-20230602/7120834.html)
+ ```在天安门事件34周年前夕，美国国会暨行政当局中国委员会（CECC）两党领袖宣布增加提名北京四通桥抗议事件主角彭立发、公民记者张展以及南京传媒学院学生李康梦等三人为2023年诺贝尔和平奖候选人。“这些英雄的勇气应该要得到全世界的嘉奖，”议员们说。```0
+  ## 6/2/2023 - [布林肯：乌克兰和平协议必须包括俄罗斯撤军](https://www.voachinese.com/a/blinken-says-peace-deal-in-ukraine-must-include-russia-s-withdrawal-20230602/7120812.html)
+ ```美国国务卿安东尼·布林肯星期五(6月2日)说，要在乌克兰达成一项“公正与持久”的和平协议，就必须包括俄罗斯从所有被其控制的乌克兰领土撤走军队。```0
   ## 6/2/2023 - [美中两军关系出现松动迹象：奥斯汀和李尚福在新加坡简短交谈](https://www.voachinese.com/a/us-chinese-defense-officials-talk-at-key-summit-20230602/7120243.html)
  ```中国国防部部长李尚福周五（六月二日）与美国国防部长劳埃德·奥斯汀在新加坡进行了交谈，这或许意味着北京在多次拒绝美国的对话要求之后双方关系出现缓和。```0
   ## 6/2/2023 - [中情局长伯恩斯五月曾密访中国，在高层沟通不畅情况下试图改善关系
@@ -47,7 +51,3 @@
  ```专家们说，如果朝鲜第一次发射间谍卫星失败之后试图再次发射，中国不大可能对平壤采取任何行动。```0
   ## 6/2/2023 - [拜登限制美国在敏感行业对华投资行政令仍无发布时间表](https://www.voachinese.com/a/still-no-timetable-on-curbing-sensitive-sector-us-investment-to-china-/7119772.html)
  ```虽然期待已久的、旨在限制美国对中国敏感行业投资的行政命令仍然没有时间表，但一位财政部高级官员表示，政府在建立这一筛选机制时专注于“狭窄和量身定制”的方法。```0
-  ## 6/2/2023 - [随着俄罗斯势力的削弱 美中试图扩大在中亚的影响力](https://www.voachinese.com/a/as-russian-influence-wanes-in-central-asia-china-and-us-make-their-case-20230601/7119391.html)
- ```中国和美国正在将新的重点放在中亚的外交上，目前莫斯科在该地区的长期主导地位因其入侵乌克兰以及G7(七国集团)国家的制裁而削弱。```0
-  ## 6/1/2023 - [香港舞台剧《5月35日》台北上演  缅怀六四 警惕中共人权恶行  ](https://www.voachinese.com/a/june-4th-project-taipei-puts-on-may-35th-play-to-remember-the-tiananmen-massacre/7119357.html)
- ```六四事件34周年前夕，一部以天安门母亲为主角的香港舞台剧《5月35日》自6月2日起一连在台北演出6场。台湾主演剧团创办人钟伯渊说，该剧反映的是中共如何在这34年来抹灭和洗白有关六四的记忆。他希望透过这出在中国和香港都禁演的舞台剧，来缅怀六四精神，更让观众认清，中共政权对人权的威胁不分对象，无所不在。```0
