--- a/新闻/自由亚洲电台.md
+++ b/新闻/自由亚洲电台.md
@@ -1,4 +1,14 @@
 
+  ## 6/2/2023 - [沙利文：威慑中俄  美国无需更多核武](https://www.rfa.org/mandarin/Xinwen/10-06022023165710.html)
+ ```据路透社6月2日报道，美国国家安全顾问杰克·沙利文（JakeSullivan）当天向军备控制协会倡导组织发表讲话时表示，美国无需更多核武器来威慑俄罗斯与中国加在一起的武装力量，因为美国具有先进的军事能力。沙利文还表示，只要莫斯科能保持一致，华盛顿将遵守2010年有关战略核武器限制条约的规定，直到该条约2026年到期，并且美国希望与中俄两国举行军备控制谈判。报道说，中国在扩大其核武库的同时，与美国在台湾问题上也处于紧张对峙状态。中方拒绝与华盛顿进行减少冲突风险的对话，本周更拒绝了两国防长在新加坡香格里拉对话会期间的会谈。根据五角大楼估算，到2035年，中国的核武库可能会增加两倍以上，达到1500枚核弹头。而威胁要在对乌克兰战争中使用核武器的俄罗斯，今年2月已宣布暂停参与上述战略核武器限制条约。沙利文表示，美国不需要将核力量增加到超过竞争对手的总和才能成功威慑他们，也不需要部署更加危险的核武器来维持威慑，威慑意味着有“更好”的方法，而不是“更多”的方法。但他强调，上述战略核武器限制条约必须考虑到中国不断增长的核武库问题。责编：何平```0
+  ## 6/2/2023 - [香格里拉对话会：中方拒绝对话 奥斯汀称之“不幸”](https://www.rfa.org/mandarin/Xinwen/9-06022023165555.html)
+ ```据本台英语部发自新加坡的报道，在南海和东亚紧张局势升级之际，新加坡举办的重要地区安全论坛“香格里拉对话会”格外引人注目。但会议期间，美中两国防长面对面交流的大门却依然关闭。美国国防部长奥斯汀此前邀请中国国防部长李尚福在新加坡香格里拉对话期间举行双边会谈，但被中国防长拒绝。奥斯汀在抵达新加坡前，以“不幸”形容中方的决定。他表示，拥有强大能力的国家相互对话很重要，以此可管理危机并防止事态失控。据悉，本届为期三天的“香格里拉对话”有来自49个国家的约600位代表与会，美中防长将分别发表演说。另据台湾中央社报道，美国防长奥斯汀与中国防长李尚福等人在周五新加坡晚宴上同坐主桌。先抵达会场的奥斯汀在李尚福到场后主动向前握手致意，但未有太多互动。责编：何平```0
+  ## 6/2/2023 - [日本在冲绳部署爱国者导弹  日媒：考虑到中国与台海局势](https://www.rfa.org/mandarin/Xinwen/8-06022023165445.html)
+ ```为应对朝鲜发射“军事侦察卫星”以及可能的飞行物散落物体等，日本军方早在数周前即已在冲绳县多个岛屿部署爱国者地对空拦截导弹。但有日本媒体认为，此举是考虑到与台湾突发事态有关的中国大陆，而进行的部队活动“预演”。据共同社6月2日报道，日本防卫相滨田靖一当天回答有关朝鲜发射“卫星”后，原计划在石垣岛展开活动的填埋地“南NU滨”，为何没有“爱国者3”导弹的踪影等问题。滨田靖一仅表示，“对于运用的详情不予回答”。据报道，日本防卫省在4月下旬已经向冲绳县的宫古、石垣、与那国三岛的自卫队设施运进“爱国者3”导弹。但因气候原因，石垣岛没有把导弹系统部署在设施外部，而在宫古岛和与那国岛上的拦截导弹发射器则呈收起状态。共同社指出，日本政府出于对中国军力增强及台湾发生突发事态的担忧，正在加强西南诸岛的防卫能力。有自卫队干部披露，此举是“把朝鲜发射作为借口，实际上是设想台湾突发事态而移动了部队。”责编：何平```0
+  ## 6/2/2023 - [“疫苗宝宝之家” 发起人何方美遭超期羁押 女儿滞留精神病院](https://www.rfa.org/mandarin/Xinwen/7-06022023165330.html)
+ ```据中国民间权益组织民生观察6月2日引述知情人士披露，维权团体“疫苗宝宝之家”发起人何方美因在2020年10月9日，带着疫苗致残的女儿前往河南辉县政府门前泼油漆抗议，被警察当场带走并刑拘后，目前该案仍未宣判，何方美本人则处在被超期羁押中，而她的两个女儿仍滞留在精神病院。据介绍，何方美因1岁10月大的女儿于2018年3月，在河南辉县接种甲肝、麻腮风、百白破疫苗后,导致病毒性脊髓炎而瘫痪。多方求助投诉均被拒后，夫妇俩人在北京一边为女儿治病，一边上访维权，并因此屡遭当局打压。民生观察披露，近日何方美写信请姐姐照顾孩子，可医院和警察都不让姐姐探望。家属就此呼吁当局，孩子们是无辜的，他们应该和家人一起生活。此外，有网友发起“六一明信片行动，接孩子回家”，通过网络声援人权捍卫者何方美。责编：何平```0
+  ## 6/2/2023 - [美国跨党派议员提案：悼念六四  谴责中共打压人权](https://www.rfa.org/mandarin/Xinwen/6-06022023165228.html)
+ ```中国六四事件34周年之际，美国众议院外交事务委员会印太小组主席金映玉（YoungKim）和该小组首席议员阿米·贝拉（AmiBera）提出一项跨党派决议，以纪念1989年天安门广场大屠杀的受害者，并谴责中国共产党继续在大陆及香港打压人权和基本自由。金映玉众议员表示，“我们永远不会忘记那些，面对压迫政权而在天安门广场与人民解放军面对面的勇敢的学生们。三十多年后，我们通过支持那些仍然被困在中国共产党威权主义下、但却热爱自由的人们，来缅怀受害者并纪念他们的遗产。”她强调，该决议向外界发出一致信息，即美国将继续成为世界舞台上自由、希望和机会的灯塔。据悉，上述决议案敦促中共当局停止对六四事件进行言论审查，接受联合国人权高专进行的独立调查，并允许流亡海外的六四参与者能在不面临报复风险的情况下返回中国。该决议同时呼吁香港政府及北京当局，尊重港人权利、自由以及香港法治体系的独立性，并依据《中英联合声明》与《基本法》有关“一国两制”的承诺，恢复香港独立的民选代表。上述议案还同时获得其他11位美国两党众议员的联署支持。责编：何平```0
   ## 6/2/2023 - [六四事件34周年　人权组织敦促中国政府承认屠城责任](https://www.rfa.org/mandarin/Xinwen/5-06022023115605.html)
  ```总部位于美国纽约的国际人权组织人权观察在六四事件34周年前夕发表声明，敦促中国政府承认大规模杀害民主运动示威者的责任，并为死难者及其家属提供赔偿。声明指出，当全球民众悼念1989年北京六四屠杀之际，中国当局正日益积极抹消相关记忆，并从六四周年的几星期前就开始防堵民间悼念。各地维权人士和六四死难者亲属团体“天安门母亲”的成员，均遭限制行动与对外联系。而中国政府从未承认对屠杀负责，也从未追究任何官员的法律责任，既无意调查相关事件，也不愿公布被杀死、杀伤、强迫失踪或入狱者的资料。人权观察表示，对六四屠杀及其后续镇压缺乏长期一致的国际应对，是导致北京当局日益明目张胆侵犯人权的因素之一。作为多部国际人权条约缔约国以及联合国人权理事会现任成员，中国有义务“维护人权的最高标准”。人权观察敦促中国政府尊重言论、结社自由与和平集会的权利，停止对质疑六四屠杀官方说法的人士加以骚扰和任意拘留；向“天安门母亲”成员道歉，公布所有死难者名单，并向死难者家属提供赔偿；批准对六四及后续事件进行公开独立调查，并迅速公布调查结果与结论；允许涉及八九民运而流亡海外的中国公民不受阻碍返国；以及调查所有参与策划或下令对示威群众非法使用致命武力的政府与军方官员，并予以起诉。责编：何平```0
   ## 6/2/2023 - [《华尔街日报》：美国在亚洲建立前哨基地应对中国导弹威胁](https://www.rfa.org/mandarin/Xinwen/4-06022023114919.html)
@@ -19,13 +29,3 @@
  ```贵州毕节日前发生极目新闻记者采访遭到殴打事件，毕节人民政府6月1日通报处置情况，派出所副所长和2名辅警被拘，镇长被提名免职。根据通报，2023年5月30日，极目新闻记者在织金县猫场镇沙坝村发现一车辆跟随，遂用手机对跟随车辆进行拍摄，后下车找跟随车辆上人员了解情况。根据内容，该车上有织金县公安局马场派出所副所长、2名马场派出所警务辅助人员，这3人下车后为阻止记者继续拍摄，过程中发生扭打造成记者面部等多处软组织挫伤，并致使他手机、眼镜等物品遭损坏。通报表示，公安机关决定依法对副所长、其中一名警务人员处以行政拘留二十日，对另一名警务人员处以行政拘留十五日处罚，同时免去副所长职务，将其调离公安系统，并解聘两位警务人员。此外公告称，经织金县委研究决定，免去负有领导责任的马场镇党委副书记、马场镇镇长职务。网上一片质疑，批评警察知法犯法，“警察为何要拦记者？谁授意的？这是要保护谁？”本台此前报道，一名极目新闻记者前往当地调查贵州教师溺水案，却遭被三名男子跟监与围殴，引起网民关注。责编：陈品洁```0
   ## 6/1/2023 - [辽宁多地出现龙卷风初 70多户受灾　10馀人受伤](https://www.rfa.org/mandarin/Xinwen/6-06012023160251.html)
  ```辽宁阜新、开原等地出现6月1日出现龙卷风导致灾情。开原市在当地时间下午2点多发生龙卷风，中国官媒央视报道，初步统计有70多户受灾、200多人受到影响，有10多名受伤民众已送往医院救治，当地有多趟高铁因龙卷风停驶。在此之前，辽宁阜新市也在当地时间下午1点左右发生龙卷风。根据网传视频画面，有行驶中的车辆被龙卷风卷起，又弹回到地上，部分居民房屋因此受损，屋顶被掀落、阳台窗户破碎、路边大树被吹断等情况，根据中国媒体“每日经济新闻”报道，有40馀栋平房受到损伤，目前没有人员伤亡。 责编：陈品洁```0
-  ## 6/1/2023 - [结束清零后首次高考　多地考生可自行决定是否戴口罩](https://www.rfa.org/mandarin/Xinwen/5-06012023124013.html)
- ```2023年高考即将来临，这是中国放弃动态清零政策，实行新冠病毒感染疫情“乙类乙管”下的首次高考，中国媒体“澎湃新闻”6月1日报道，许多当地政府表示考生可自主决定是否佩戴口罩。黑龙江双鸭山市疾病预防控制中心宣布，考试过程中，除特殊情况外，考生自行决定是否佩戴口罩。云南个旧市招生考试委员会表示，普通考场考生自行决定是否佩戴口罩，备用考场考生全程规范佩戴医用外科或以上级别口罩。另外包括贵州桐梓县教育体育局、广西柳州市招生考试院规定，考生在进出考场时须配戴口罩，就座之后考生可自主决定是否佩戴。近日中国多地出现新一波新冠病毒感染高峰，“二阳”人数不断上升。多地疾控部门除了就配戴口罩等流程问题提出解答外，也相继发出健康提示，呼吁考生“平常心”。根据中国教育部消息，今年全国高考报名人数1291万人，比去年增加98万人，再创历史新高。责编：陈品洁```0
-  ## 6/1/2023 - [自由之家：中国劳工抗议活动激增](https://www.rfa.org/mandarin/Xinwen/4-06012023123724.html)
- ```根据总部设在美国的国际人权组织"自由之家"（FreedomHouse）发布的“异言网”（ChinaDissentMonitor）最新报告，2023年1月到3月之间，中国共发生了583起抗议事件，使2022年6月至2023年4月期间的事件总数达到2,230起，至少累计有29000人参与。这些抗议事件其中78%是示威游行，10%是举牌抗议，4%是阻挠占领，3%是集体上访，3%是罢工。根据报告统计，抗议事件最多的地区是河南、广东和山东。报告显示劳工抗议的活动激增，在2022年12月至2023年2月期间，报告纪录了370起线下劳工抗议活动，反映了农历新年期间围绕拖欠工资的周期性问题，此外这个现象也受到中国房地产行业持续发生的财政危机，以及劳工权利保护不足的长期问题影响。报告还说，关于住房的抗议持续存在，虽然相对于去年夏天，针对住房项目停滞和相关不满的示威活动有所减少，但这仍然是线下抗议的主要原因之一。另外，受迫害的宗教团体和少数民族社区抗议也是数据来源之一。“异言网”指出，2022年6月以来，共发生了34起法轮功修炼者、藏人、基督徒、穆斯林和蒙古族的抗议行为，其中在27起案件中，有抗议者受到了镇压，突显了中国政府对这些群体的严厉打击。 责编：陈品洁```0
-  ## 6/1/2023 - [美防长：中国防长拒绝会晤是“不幸的”](https://www.rfa.org/mandarin/Xinwen/3-06012023123156.html)
- ```美国国防部长奥斯汀（LloydAustin）6月1日对中国国防部长拒绝会晤一事表态，他表示，中国国防部长李尚福拒绝在新加坡参加第20届香格里拉对话期间与他会晤是“不幸的”，再次强调两国军方应定期交流，并保持开放沟通渠道。奥斯汀在访问日本期间，与日本防卫大臣滨田靖一在东京召开联合记者会时做出上述表态，同时他也对近日中国拦截美国及其盟友飞机的行为表示“非常令人担忧”，担心某个时候会发生一起类似事件，“可能很快就会失控”。奥斯汀：“对我们和盟友飞机的挑衅性拦截非常令人担忧，我们希望他们改变行动。”自从时任美国会众议院议长佩洛西在去年8月访问台湾后，中国切断了与美国的多项交流项目，包括军方之间的交流。在今年初的所谓中国间谍气球事件之后，中国军方拒绝与美国军方官员通电话。日本防卫大臣滨田靖一在记者会上，则是谈到了美日深化同盟关系，以共同应对包括中国在内的安全挑战。路透社报道说，滨田靖一将在新加坡的防务会议期间与李尚福会面。 责编：陈品洁```0
-  ## 6/1/2023 - [特斯拉执行长马斯克与中国国务院副总理丁薛祥会面](https://www.rfa.org/mandarin/Xinwen/2-06012023122218.html)
- ```近日前往中国访问的特斯拉执行长马斯克（ElonMusk），当地时间5月31日下午在北京与中国国务院副总理丁薛祥会面，路透社表示消息人士拒绝提供双方的谈话细节，而特斯拉与中国国新办也未回应路透社置评请求。路透社指，这应是丁薛祥首次与外企执行长进行一对一会谈，显示出中国重视与特斯拉之间的关系。马斯克在与丁薛祥会面之前，先后与中国国务委员兼外交部长秦刚、商务部长王文涛、工业和信息化部长金壮龙等部委首长会面。根据中国发布的声明，马斯克在与秦刚会面时表示，特斯拉公司反对美中“脱钩断链”；会面王文涛时也赞同美中关系不是“零和博弈”。根据特斯拉对外事务副总裁在微博的发文，马斯克在离开的前一晚参观特斯拉位于上海郊区的工厂并会见员工。此外，他也与上海市委书记陈吉宁会面，陈吉宁欢迎特斯拉前往上海投资。根据法新社消息，马斯克已于6月1日离开中国。 责编：陈品洁```0
-  ## 6/1/2023 - [美台21世纪贸易倡议签署首批协定　中国外交部坚决反对](https://www.rfa.org/mandarin/Xinwen/1-06012023121749.html)
- ```美国与台湾在６月１日正式签署“美台21世纪贸易倡议”首批协定，将由美国在台协会执行理事蓝莺（IngridLarson）与台湾驻美代表萧美琴代表签署。根据美国贸易代表办公室（USTR）预告，美国贸易代表办公室主管亚洲事务的副代表莎拉·比安奇（SarahBianchi）将会出席见证仪式，台湾行政院政务委员邓振中也会出席。根据台湾行政院新闻稿，邓振中在协定签署后表示，美台所签署之贸易协定，是自1979年以来双方之间最具规模、最全面性的贸易谈判，所达成的阶段性成果，标帜著美台经贸关系历史性的里程碑，也为台湾和主要贸易国洽签贸易协定迈出了关键一步。美国贸易代表办公室发言人在一份声明中说：“我们感谢台湾合作伙伴，帮助我们达到这一个重要里程碑，并期待未来就该倡议谈判授权中规定的其他贸易领域进行谈判。”对此，中国外交部再度表示坚决反对，中国外交部发言人毛宁６月１日在例行记者会上，要求美方不得与台湾商签具有主权意涵和官方性质的协定，不得藉经贸名义向“台独”分裂势力“发出任何错误信号”，指美方有关行径严重违反“一个中国原则”和“中美三个联合公报”规定，也违背美方自己作出的仅同台湾保持非官方关系的承诺。美国贸易代表戴琪（KatherineTai）5月18日曾表示，美台21世纪贸易倡议已完成谈判，双方预计数周内将针对贸易便捷化、中小企业、反贪腐等5项议题，签署首批协定。 责编：陈品洁```0
