--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,8 @@
 
+  ## 6/2/2023 - [神舟十六号完成载人任务　中国航天技术恐追上美国?](https://www.voachinese.com/a/china-launches-shenzhou-16-mission/7120934.html)
+ ```中国成功发射神舟十六号载人飞船后，三名宇航员6月2日已在天宫空间站与前一期的宇航员正式完成交接。观察人士表示，这代表中国的载人航天技术已取得稳步进展，有助于中共进一步宣扬国力和巩固其政权的合法性。分析人士说，美国虽仍在太空领域保有技术领先和经验优势，但若未持续将航太发展视为优先政策，未来恐被中国追上。```0
+  ## 6/2/2023 - [拜登将就美国成功避免债务违约发表讲话](https://www.voachinese.com/a/biden-to-deliver-remarks-on-us-avoiding-default-20230602/7120899.html)
+ ```美国总统乔·拜登(JoeBiden)将签署《财政责任法案》，该法案暂时取消联邦政府的债务上限至2025年1月，并避免可能发生的灾难性金融违约。```0
   ## 6/2/2023 - [纪念六四事件34周年，CECC主席提名彭立发、张展、李康梦角逐诺贝尔和平奖](https://www.voachinese.com/a/us-cecc-china-tiananmen-34th-anniversary-20230602/7120834.html)
  ```在天安门事件34周年前夕，美国国会暨行政当局中国委员会（CECC）两党领袖宣布增加提名北京四通桥抗议事件主角彭立发、公民记者张展以及南京传媒学院学生李康梦等三人为2023年诺贝尔和平奖候选人。“这些英雄的勇气应该要得到全世界的嘉奖，”议员们说。```0
   ## 6/2/2023 - [布林肯：乌克兰和平协议必须包括俄罗斯撤军](https://www.voachinese.com/a/blinken-says-peace-deal-in-ukraine-must-include-russia-s-withdrawal-20230602/7120812.html)
@@ -47,7 +51,3 @@
  ```特斯拉公司首席执行官埃隆·马斯克时隔三年后访问中国，受到北京高规格接待。分析认为，中国利用马斯克这样的国际商界领袖重塑自己的“开放”形象，而国际企业在急于维持中国市场的同时将不可避免地受到美中关系“逆风”的影响。```0
   ## 6/2/2023 - [中国对美光芯片的禁令将是美韩关系试金石](https://www.voachinese.com/a/china-s-micron-chips-ban-is-litmus-test-for-south-korea-20230601/7119776.html)
  ```华盛顿和北京之间的半导体贸易战可能会让首尔陷入困境，因为韩国必须在支持其最亲密的盟友或接受其最大贸易伙伴中国提供的利润丰厚的出口机会之间做出选择。```0
-  ## 6/2/2023 - [专家分析：中国不大可能因朝鲜发射卫星而对其采取行动](https://www.voachinese.com/a/experts-north-korea-s-satellite-launch-unlikely-to-draw-china-s-action-20230601/7119792.html)
- ```专家们说，如果朝鲜第一次发射间谍卫星失败之后试图再次发射，中国不大可能对平壤采取任何行动。```0
-  ## 6/2/2023 - [拜登限制美国在敏感行业对华投资行政令仍无发布时间表](https://www.voachinese.com/a/still-no-timetable-on-curbing-sensitive-sector-us-investment-to-china-/7119772.html)
- ```虽然期待已久的、旨在限制美国对中国敏感行业投资的行政命令仍然没有时间表，但一位财政部高级官员表示，政府在建立这一筛选机制时专注于“狭窄和量身定制”的方法。```0
