--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,7 @@
 
+  ## 6/2/2023 - [
+面对俄中挑战，美国对其现有核武库充满信心](https://www.voachinese.com/a/us-confident-in-its-nuclear-stockpile-seldin-20230602/7120863.html)
+ ```美国表示，它不打算制造更多核武器来应对来自俄罗斯、中国以及越来越多的拥有或可能很快拥有核能力的对手的威胁。```0
   ## 6/2/2023 - [神舟十六号完成载人任务　中国航天技术恐追上美国?](https://www.voachinese.com/a/china-launches-shenzhou-16-mission/7120934.html)
  ```中国成功发射神舟十六号载人飞船后，三名宇航员6月2日已在天宫空间站与前一期的宇航员正式完成交接。观察人士表示，这代表中国的载人航天技术已取得稳步进展，有助于中共进一步宣扬国力和巩固其政权的合法性。分析人士说，美国虽仍在太空领域保有技术领先和经验优势，但若未持续将航太发展视为优先政策，未来恐被中国追上。```0
   ## 6/2/2023 - [拜登将就美国成功避免债务违约发表讲话](https://www.voachinese.com/a/biden-to-deliver-remarks-on-us-avoiding-default-20230602/7120899.html)
@@ -49,5 +52,3 @@
  ```震惊世界的天安门事件34周年来临之际，中共当局在党总书记习近平强行连任、经历三年疫情和白纸运动之后仍然一如既往地避而不提其当年所称的“平息反革命暴乱”或后来淡化为“政治风波”的这段历史，而是一再强调国家安全，高度戒备，加强了对政治敏感人物的严密监控，要求他们在六四敏感期噤声及中断与外界联系，甚至强迫一些异议人士外出旅游，同时加紧驱赶一些在北京的人权律师及其亲属，严重干扰了他们的正常生活和工作。```0
   ## 6/2/2023 - [美中关系恶化 北京为何奉马斯克为座上宾？](https://www.voachinese.com/a/musk-china-visit-20230601/7119766.html)
  ```特斯拉公司首席执行官埃隆·马斯克时隔三年后访问中国，受到北京高规格接待。分析认为，中国利用马斯克这样的国际商界领袖重塑自己的“开放”形象，而国际企业在急于维持中国市场的同时将不可避免地受到美中关系“逆风”的影响。```0
-  ## 6/2/2023 - [中国对美光芯片的禁令将是美韩关系试金石](https://www.voachinese.com/a/china-s-micron-chips-ban-is-litmus-test-for-south-korea-20230601/7119776.html)
- ```华盛顿和北京之间的半导体贸易战可能会让首尔陷入困境，因为韩国必须在支持其最亲密的盟友或接受其最大贸易伙伴中国提供的利润丰厚的出口机会之间做出选择。```0
