--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,4 +1,8 @@
 
+  ## 6/2/2023 - [印度东部发生火车意外 至少50死 数百人受伤](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20230602-%E5%8D%B0%E5%BA%A6%E4%B8%9C%E9%83%A8%E5%8F%91%E7%94%9F%E7%81%AB%E8%BD%A6%E6%84%8F%E5%A4%96-%E8%87%B3%E5%B0%9150%E6%AD%BB-%E6%95%B0%E7%99%BE%E4%BA%BA%E5%8F%97%E4%BC%A4)
+ ```6月2日星期五，印度东部奥迪沙邦发生火车意外，导致至少50人死亡，数百人受伤。```0
+  ## 6/2/2023 - [在中国，埃隆·马斯克展示了他是怎样的两面派](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E4%B8%96%E7%95%8C%E6%8A%A5/20230602-%E5%9C%A8%E4%B8%AD%E5%9B%BD%EF%BC%8C%E5%9F%83%E9%9A%86%C2%B7%E9%A9%AC%E6%96%AF%E5%85%8B%E5%B1%95%E7%A4%BA%E4%BA%86%E4%BB%96%E6%98%AF%E6%80%8E%E6%A0%B7%E7%9A%84%E4%B8%A4%E9%9D%A2%E6%B4%BE)
+ ```世界首富埃隆·马斯克在对中国的三天访问期间受到了中国高规格的接待。周五，法国世界报就马斯克的姿态及其两面派语言刊发了社论。```0
   ## 6/2/2023 - [为阻止朝鲜开发核导弹，韩国强调要切断朝鲜资金链](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230602-%E4%B8%BA%E4%B8%BA%E9%98%BB%E6%AD%A2%E6%9C%9D%E9%B2%9C%E5%BC%80%E5%8F%91%E6%A0%B8%E5%AF%BC%E5%BC%B9%EF%BC%8C%E9%9F%A9%E5%9B%BD%E5%BC%BA%E8%B0%83%E8%A6%81%E5%88%87%E6%96%AD%E6%9C%9D%E9%B2%9C%E8%B5%84%E9%87%91%E9%93%BE)
  ```在新加坡举行的第20届香格里拉对话会上韩国代表强调为阻止朝鲜核导弹开发进程，有必要切断朝鲜资金链。```0
   ## 6/2/2023 - [英国国防部长称乌克兰今年能夺回克里米亚](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230602-%E8%8B%B1%E5%9B%BD%E5%9B%BD%E9%98%B2%E9%83%A8%E9%95%BF%E7%A7%B0%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%8A%E5%B9%B4%E8%83%BD%E5%A4%BA%E5%9B%9E%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A)
@@ -51,10 +55,6 @@
  ```6月1日，法国总统马克龙（EmmanuelMacron）与乌克兰总统泽连斯基（VolodymyrZelenskyy）在摩尔多瓦出席第二届欧洲政治共同体（EPC）峰会期间举行了双边会晤。会后，两国领导人决定，法乌防长将就培训乌克兰飞行员和技术人员的有关事宜展开磋商，并于下一次的乌克兰防务问题国际联络小组会议上提出正式框架和机制，与其他将对乌提供相关培训的国家协商，作出共同决定。```0
   ## 6/1/2023 - [法国参议院通过动议案，禁止进口维吾尔人强迫劳动产品](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20230601-%E6%B3%95%E5%9B%BD%E5%8F%82%E8%AE%AE%E9%99%A2%E9%80%9A%E8%BF%87%E5%8A%A8%E8%AE%AE%E6%A1%88%EF%BC%8C%E7%A6%81%E6%AD%A2%E8%BF%9B%E5%8F%A3%E7%BB%B4%E5%90%BE%E5%B0%94%E4%BA%BA%E5%BC%BA%E8%BF%AB%E5%8A%B3%E5%8A%A8%E4%BA%A7%E5%93%81)
  ```法新社报道，法国参议院6月1日星期四通过了一项动议案，要求禁止进口由中国的维吾尔人通过强迫劳动生产出的产品。```0
-  ## 6/1/2023 - [加皇家骑警称已关闭与“中国警察站”有关的“非法警务活动”](https://www.rfi.fr/cn/%E7%BB%8F%E8%B4%B8/20230601-%E5%8A%A0%E7%9A%87%E5%AE%B6%E9%AA%91%E8%AD%A6%E7%A7%B0%E5%B7%B2%E5%85%B3%E9%97%AD%E4%B8%8E-%E4%B8%AD%E5%9B%BD%E8%AD%A6%E5%AF%9F%E7%AB%99-%E6%9C%89%E5%85%B3%E7%9A%84-%E9%9D%9E%E6%B3%95%E8%AD%A6%E5%8A%A1%E6%B4%BB%E5%8A%A8)
- ```据加拿大广播公司（CBC）6月1日报导，加拿大皇家骑警表示，该部门已经“在安大略省、魁北克省和不列颠哥伦比亚省关闭了”与被指是中国警察站“有关的非法警察活动”。其没有说明是否进行了任何逮捕。加拿大公共安全部长门迪西诺(MarcoMendicino)4月告诉一个议会委员会称，联邦警察部门已采取果断行动，关闭了这些站点。```0
-  ## 6/1/2023 - ["六四"34周年将至 北京四通桥路牌突被拆除](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230601-%E5%85%AD%E5%9B%9B-34%E5%91%A8%E5%B9%B4%E5%B0%86%E8%87%B3-%E5%8C%97%E4%BA%AC%E5%9B%9B%E9%80%9A%E6%A1%A5%E8%B7%AF%E7%89%8C%E7%AA%81%E8%A2%AB%E6%8B%86%E9%99%A4)
- ```六四事件34周年将至，北京民众近日赫然发现，2022年10月被悬掛抗议横幅而成名的四通桥，掛在护栏外的"四通桥"路牌日前突被拆除。而百度、高德两大网络地图也不再标示四通桥的位置。```0
   ## 6/1/2023 - [台美签署首批协定 蔡英文期待台美建立更紧密伙伴关系](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230601-%E5%8F%B0%E7%BE%8E%E7%AD%BE%E7%BD%B2%E9%A6%96%E6%89%B9%E5%8D%8F%E5%AE%9A-%E8%94%A1%E8%8B%B1%E6%96%87%E6%9C%9F%E5%BE%85%E5%8F%B0%E7%BE%8E%E5%BB%BA%E7%AB%8B%E6%9B%B4%E7%B4%A7%E5%AF%86%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB)
  ```台湾与美国双方6月1日于华盛顿的美国在台协会（AIT）总部签署美台"21世纪贸易倡议"首批协定。台湾总统蔡英文表示，期待未来台美建立更紧密伙伴关系。台湾经贸办称，这项协定为台美经贸打下坚实的法律基础，未来极有机会发展为更广泛的自由贸易协定，且有助于台湾参加跨太平洋伙伴全面进步协定（CPTPP）。```0
   ## 6/1/2023 - [泽连斯基强烈要求加入北约欧盟 马克龙：北约应给予乌克兰安全保证](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230601-%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%E5%BC%BA%E7%83%88%E8%A6%81%E6%B1%82%E5%8A%A0%E5%85%A5%E5%8C%97%E7%BA%A6%E6%AC%A7%E7%9B%9F-%E9%A9%AC%E5%85%8B%E9%BE%99-%E5%8C%97%E7%BA%A6%E5%BA%94%E7%BB%99%E4%BA%88%E4%B9%8C%E5%85%8B%E5%85%B0%E5%AE%89%E5%85%A8%E4%BF%9D%E8%AF%81)
