--- a/新闻/自由亚洲电台亚太.md
+++ b/新闻/自由亚洲电台亚太.md
@@ -1,5 +1,5 @@
 
-  ## 6/2/2023 - [王丹身陷性骚扰指控  “李元钧”首次接受采访](https://www.rfa.org/mandarin/yataibaodao/zhengzhi/wy-06022023123844.html)
+  ## 6/2/2023 - [王丹身陷性骚扰指控  "李元钧"首次接受采访](https://www.rfa.org/mandarin/yataibaodao/zhengzhi/wy-06022023123844.html)
  ```6月2日是纽约六四纪念馆正式开幕的日子。正在纽约主持开幕式的八九民运领袖王丹却忽然被台湾男子"李元钧"在社交媒体脸书上指控遭到了对方的性骚扰。本台在第一时间采访到了王丹和"李元钧"双方的说法。 纽约六四纪念馆开幕六四领袖重申追求自由中国决心 6月2日早上纽约时间9点40分，离纽约六四纪念馆正式开幕的时间还有20分钟。本台记者在纪念馆现场问到王丹对性骚扰指控的回应，他说，“一句话，完全没有的事情，既然是完全没有的事情，我也没办法做任何回应，对不对？”王丹的声音背景里是纪念馆现场人群嘈杂的声音。突然而至的指控这一指控是北京时间6月2日下午4点左右出现在脸书上的。账号名为“李元钧”的男子在脸书上贴出一张配图，背景上是悼念1989年六四大屠杀的烛光晚会的模糊景象，中间是四个醒目的白色中文大字“请你道歉”。在贴文中，“李元钧”详述了9年前的2014年6月6日，王丹在纽约法拉盛一家饭店的房间里强吻他，并强暴未遂的过程。接着，“李元钧”又讲述了其它一些细节。“李元钧”在贴文中还说，王丹此后几天一直在语言上骚扰他，“接下来的一周，我却持续面临他时不时的言语挑逗、性骚扰笑话，以及持续明示暗示我，希望我跟他一起睡。”“李元钧”还告诉本台那次美国之行的一些背景，“2014年6月的时候，我刚认识王丹没多久，他便邀请我到美国去，那个时候我才不到20岁。对我来说，王丹是一个名人，我当时对他非常憧憬，能被他邀请到美国，当然是我的荣幸。”但“李元钧”并没有解释当时王丹邀请他的原因。谢姓助理是谁？“李元钧”说，当时王丹身边还有一个谢姓助理，对他的性骚扰是在谢姓助理离开的情况下发生的。事发后，“李元钧”把情况告诉这位助理，但助理并没有提供任何帮助，只是说，王丹是在跟他开玩笑，是在闹他。“李元钧”在稍后的一个脸书贴文中公布了当时他和谢姓助理短信的截图。但这位谢姓助理是谁，“李元钧”并没有公布，本台尚无法查证。“李元钧”在这次旅行后回到台湾。他在贴文中说，他在美国时人生地不熟，也不知道报警，不知道该怎么办，所以一直忍耐。但这件事是他此生最害怕的时光之一，他曾经把自己关在出租屋内好几天，哭泣并恐惧，试图忘记这次美国之行。“李元钧”坦诚自己是同性恋的身份，并表示他曾将美国之行发生的事情，告诉共事过的台北市议员林亮君和当时还在任的台北市议员邱威杰（呱吉）。一个"不惊讶" 一个"不意外"“李元钧”在贴文里强调，此后每到6月4日前后，王丹出面发言的日子，他就感到恶心和不安，“我害怕这个人、我害怕听到他的声音、我害怕看到他的样子。”对于在今年六四前公开此事，“李元钧”告诉本台，他并不是趁这个日子，而是因为最近在台湾有不少政治工作者提出了他们在职场上遭到的性骚扰指控，“这些事情对我影响很大，对我来说，也给了我很多鼓励；我觉得刚好在这个时间点，如果我现在不说的话，我不知道还有什么时候能有勇气把这段话说出来。”据台湾中央社报道，影集《人选之人－造浪者》编剧之一的简莉颖也在6月2日当天在脸书发表长文，指控大学时期曾遭中国流亡诗人贝岭性骚扰。但贝岭对外界回应称，这完全是一个杜撰。对于“李元钧”在六四前公开此事，王丹告诉本台，“我就让外界去判断，我也不想说什么。我想大家都很清楚，我也没必要说什么。”王丹在美国东部时间6月2日早上听闻这一指控后，很快在脸书发帖回应说，他对此有点无奈，但也并不惊讶，这位作者所提的性骚扰一事完全不存在。他同时也表示自己很忙，而他的政治活动不会受到任何影响。他在推特上回应他人询问时也做出了类似的表述。“李元钧”随即在脸书上发帖说，他对王丹这样的回应不意外，但令人失望。他质问说，“就事论事、坦诚错误，一句对不起就这么困难吗？”“李元钧”告诉本台，除了已经公布的与谢助理的短信记录外，他手里还有一些证据，“我还有其他一些在美国留下来的照片和录音，但我还是希望老师可以，希望王丹可以好好面对自己的过错，不要等到我把这些资讯公开出来后，再来说更多的谎，来圆更多的这个其实不该说的谎。”本台记者注意到，到截稿时为止，王丹已经删除了他在推特上有关此事的回应。 记者：王允（记者唐缘媛、黄春梅、夏小华对报道有贡献）  责编：梒青   网编：洪伟```0
   ## 6/2/2023 - [六四34周年特别报导：接过广场上话筒的女青年](https://www.rfa.org/mandarin/yataibaodao/zhengzhi/al-06022023095528.html)
  ```六四34周年之际，“白纸运动”后站出来的海外中国留学生，将首次以他们的方式纪念“六四”。其实在“白纸运动”期间，海内外大批中国女性勇敢发出反抗极权的声音。她们对“六四”有什么看法？她们又如何连结当年八九学运的女性领袖？ 没有不透风的墙，即便是防火墙【我是怎么知道六四的】来信节选华尔街日报:白纸运动参与者曹芷馨入狱四个月后获释对话郑楚然：女权的成功是一个过程习近平发妇女节祝福　人权组织促释放女性政治犯 “自由中国！这仍是我们的责任！共产党下台！习近平下台！六四不是历史！而是我们的政治现实！”刚在英国完成大学本科最后一年课程的雀氏，这天站在伦敦特拉法加广场的一角。在两个男生中间，穿着粉色外套的她格外显眼。她拿起话筒大声呼喊，向途人介绍何谓“六四”，并宣传一周后由她参与举办的“六四”纪念活动。  “白纸运动”女青年：我不是一个乖乖的小女孩了即使喊到嗓子嘶哑，她仍努力保持声浪。“上街你要做什么？就是要喊大声啊，你就是要抢话语权啊！一直以来都是男性比较容易抢话语权，为什么？因为女性被规顺，让你不要说话，然后男性的声音一直会没过女性。那么我就是意识到这一点，所以从那以后我一直大声说话，我不是一个乖乖的小女孩了。”去年年底，受“四通桥勇士”彭载舟（本名彭立发）启发，雀氏开始在伦敦参与“海报运动”，在校园张贴反封控、支持自由民主的海报，从而认识一群志同道合的在英中国留学生，并成立了非营利组织“ChinaDeviants”（暂译“中国反贼”）。 由在英中国留学生成立的非营利组织“ChinaDeviants”（暂译“中国反贼”），将举办“六四”纪念活动。（“ChinaDeviants”提供） 作为骨干成员的雀氏，积极主办各种活动，并在英国声援“白纸运动”。“我觉得现在女权主义者会做的一个事情就是，首先是做一些主导的行动。第二个就是说话要大声，大声的把自己的诉求喊出来。”从女权主义反思极权在中国成长、接受受教育，雀氏说，她过去对“六四”的认识很模糊，只知道天安门发生了“很糟糕的事情”，直到去到英国留学，被当地同学问起后，她在网上搜索，才真正了解“六四”是怎么一回事。不过对她而言，真正的政治启蒙，是在英国读到的女性主义理论，从而对充满父权色彩的中国国家体系产生怀疑。“我意识到女权是没法跟政治脱离关系的，因为我们要达到我们的权利时，我们必然需要造成一定的政治影响，然后得到一些政治的权利。”雀氏说：“如果要批判共产党，我觉得它不止是一个极权政府，它也是一个非常父权、父系的体系。比如说习近平所做的一些外交手段，就像一个‘强人意识形态’，就是他要做一个强壮的男人似的。在党内的话，女性和少数民族群体也是当花瓶一样。” 雀氏除了举办纪念“六四”的活动以外，也持续举办和女性议题相关的活动。（“ChinaDeviants”提供） 雀氏除了举办纪念“六四”的活动以外，也持续举办和女性议题相关的活动。（“ChinaDeviants”提供） 被男性主导的八九学运？而另一方面，她也重新反思作为中国反抗运动先河的八九学运。她认为这场运动，更大程度上被男性主导，女性更多担任后勤角色。然而她们的贡献，在过去30多年一直被忽略。“当我学过一些女性主义者比较熟悉的理论，比如说权力等级、力量不平等，以及女性怎样被隐形的方式剥削，以及为何历史上女性总是被抹去。这个其实跟六四也有一定关联，六四期间有很多女性在努力，但是你会看到拍出来的照片，以及留下来的文档之类，实际上是以男性为主。” 雀氏除了举办纪念“六四”的活动以外，也持续举办和女性议题相关的活动。（“ChinaDeviants”提供） “我觉得她的观察很尖锐。”八九学运期间，代表研究生参加北京高校学生自治联合会（高自联）的王超华，是当年少数的女性学生领袖。北京市公安局在“六四”后发布的21人通缉名单中，就只有王超华和柴玲两名女性。王超华忆述在1989年4月底、胡耀邦追悼会后几天，她第一次到北大和学生领袖开会时，就是柴玲把她带到男生宿舍，引见给封从德。 代表研究生参加北京高校学生自治联合会（高自联）的王超华，是当年少数女性学生领袖之一。（王超华提供） 她说，当年的普遍现象，就是所有学生领袖的会议，都是在男生宿舍进行，房间里头全是男生，女生更多是从旁协助，使她感受到当中的性别差异：“比如我从我们学校到北大和其他学校，去看运动进行的状况、去了解和交流时，到每一个学校去的一定都是男生宿舍。这些学运的积极份子正在某一个宿舍开会，女生在那边一般都是，积极的女生基本上成了积极男生的秘书，女生基本上是辅助和支援的角色。”王超华在学运期间已经37岁，是学生领袖中年龄较大的研究生，因而获得其他学生领袖的尊重，比较可以不受女性身份束缚、自由发声。回望当年，王超华认为她和柴玲在学运中担当了不同角色，却都无法脱离性别色彩：“我是作为一个年龄比大家年龄大很多，然后可以起到平衡的一个角色。柴玲是作为一个比较弱小，但是充满激情的、纯洁的、理想形的形象。从绝食开始到最后，都有一个很强号召力的形象。” 代表研究生参加北京高校学生自治联合会（高自联）的王超华，是当年少数女性学生领袖之一。（王超华提供） 和雀氏一样，王超华同样认为，女性在八九学运中的角色，在过去30多年一直被边缘化。“当然我一直在那儿，我本身就是一个女性的存在，但是我这个性别的身份，基本上是被边缘化，或者是被抹去的，没有被看作代表了性别的意义。这么长时间，30几年了，您是第一位找到我，从性别的角度来讲六四。30多年啊，虽然身为女性，虽然每年都在讲纪念，但是这个性别角色是在历史上被抹去，或被边缘化。”在八九学运中缺席的女权声音在当年的北京市民吕京花看来，学运中的女性领袖虽然不多，却有很多女性参与了杂务和支援工作。当年在北京开了一家服装店的她，受学生运动感染，干脆关门不做生意，推着自行车为学生募捐、送物资：“我是看着一帮学生端着捐款箱，还有一帮学生在天安门广场绝食呢。然后很多学生是外地的，没吃没喝的，我们老百姓能支持一点就支持吧，因为毕竟是外地孩子嘛。我们能给一点帮助就给吧。”她说，“反正那时候呼哩哗啦，市民都来支持，特别积极地给一些物资。家里买的汽水，一箱一箱给大家端出来，家里包的馒头、包子也都端出来。”吕京花更加入北京工人自治联合会（工自联），组织工人运动。她担任播报员，在天安门广场上播报运动的最新消息，以及各种群众来稿，传播工人及不同群体的声音。回看当时，她说学生和群众有反贪腐、争取工人权益及政治改革的诉求，却几乎没有听到争取女性权利的呼声。 吕京花当年更加入北京工人自治联合会（工自联），组织工人运动。她担任播报员，在天安门广场上播报运动的最新消息。（吕京花提供） “我们受的教育毕竟是传统教育，来束缚我们比较前卫的想法。包括人权啊，在我们眼里都是新单词，都是来到海外才知道。当时对妇女的权利意识有没有？可能有，但是在这场运动当中，它的声音非常弱，似乎没有特意地带出话题，说我们要提高女性的权益。”作为女性，吕京花也承认，30多年前的她完全没有意识要为女权发声。“六四”后政治改革告终女性成政治花瓶王超华也表示，当年她参与北京高校学生对话代表团，当学生准备和政府对话的议题时，女权诉求从未被列入议程当中。然而实际上，她认为八九学运期间的女性社会地位，反而比文革时期倒退，原因是当中共走出文革、走进经济改革以后，包括男女平等等很多社会议题，都被放弃。毛泽东曾提倡“妇女能顶半边天”，鼓励女性走出家庭、投身公共领域。然而王超华认为，随着“六四”后政治改革告终，中国女性的社会地位也愈来愈低─社会传统愈来愈要求女性要规顺乖巧；在政治体制内，女性沦为花瓶，更成为权贵斗争中的牺牲品：“近二、三十年的经济改革，官僚基本上就是权贵，同时有权和钱。打黑打贪的时候，常常就会揪出来，谁谁谁有多少情妇，女性变为政治斗争当中，提供性服务的角色。不光是官场，包括大公司里，都变成一个理所当然、被公开接受的情况。所以这是一个对女性非常不友好的社会现实。” 王超华认为，不少受过高等教育的职业女性，都站出来参与“白纸运动”，对她们非常敬佩。（王超华提供） 联合国消除对妇女歧视委员会日前发布的最新报告，指出中共二十大7名政治局常委中没有女性，而24名政治局委员中，也20年来首次没有女性。而十四届中国全国人大中，女性比例不到27%。委员会对中国最高领导层缺少女性感到担忧，敦促中国政府增加决策层以及政府部门的女性人数。委员会也对中国女性人权捍卫者被恐吓和骚扰的报道表达关切。吕京花认为，正是中国目前的体制，才会出现像“铁链女”这样的悲剧。然而习近平的太太彭丽媛，虽然顶着联合国教科文组织“妇女、儿童特使”的头衔，却对“铁链女”的情况不发一言：“彭丽媛对中国妇女作出过什么贡献啊？她不就是一个歌唱演员吗？她有走到基层吗？她了解中国妇女的痛苦吗？如果你要真了解，你真的代表中国女性的话，去年三月就曝光了一个‘铁链女’。彭丽媛还代表中国妇女，在国际妇女代表大会发言，我觉得简直是违背妇女代表的职衔，是不能接受的。”从沉默到爆发从“白纸运动”走出来的中国女性吕京花表示，她在海外中国人权机构任职时，不少中国基层妇女不堪重压，相继冒险致电给她，越洋曝光地方拆迁、劳动教养等社会不公问题，可见中国女性当中，已积累了一定程度对体制的不满。王超华认为，中国社会长久的压迫，使得不少受过高等教育的职业女性，都站出来参与“白纸运动”，对她们表示非常敬佩：“白纸运动，我们看到站在前边的，绝大部分都是女生。包括被拘捕的，基本也都是女生，真是非常引人注目的一个社会变迁。可以看到女权主义的意识正在进入新一代，受过教育的女性产生了自觉意识。” 王超华认为，不少受过高等教育的职业女性，都站出来参与“白纸运动”，对她们非常敬佩。（王超华提供） 曹芷馨、李元婧、翟登蕊、李思琪，四位在北京亮马桥参与“白纸运动”后被捕的年轻女生，成为了中国新一代女权运动的代表。而愈来愈多中国女性，也在海内外以不同形式发出反抗声音。像雀氏一样，除了纪念“六四”的活动以外，她也努力举办和女性议题相关的活动：“通过让大家认识女性主义，说不定她们会慢慢觉醒一些公民意识，然后就会慢慢去批判整个政治体系。所以反而通过女性主义的一些理论去切入的话，其实对大陆内的影响可能会更大一点。包括你看到在大陆内，其实女权运动就一直没停过。”新一代的中国女性，正接过天安门广场上的话筒，在全球各地大声为她们的女性同胞发声。（由于安全原则，本文中的雀氏为化名。她的声音经过技术处理） 记者：吕熙（伦敦）　责编：嘉远  网编：何足```0
