--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,6 @@
 
+  ## 6/2/2023 - [司法部：不会就在彭斯家中发现机密文件一事提起刑事指控](https://www.voachinese.com/a/justice-dept-won-t-charge-pence-over-handling-of-classified-documents-20230602/7120987.html)
+ ```美国司法部已通知前副总统迈克·彭斯的法律团队，不会就在其印第安纳州的家中发现机密文件的事件提起刑事指控。```0
   ## 6/2/2023 - [
 面对俄中挑战，美国对其现有核武库充满信心](https://www.voachinese.com/a/us-confident-in-its-nuclear-stockpile-seldin-20230602/7120863.html)
  ```美国表示，它不打算制造更多核武器来应对来自俄罗斯、中国以及越来越多的拥有或可能很快拥有核能力的对手的威胁。```0
@@ -50,5 +52,3 @@
  ```现年50多岁的周锋锁，对1989年那个令人沮丧的春天记忆犹新，当时坦克车开进了北京的天安门广场。当共产党的军队蜂拥而上强制结束民主抗议活动时，大学生们和许多人遭到殴打、流血，导致数百甚至数千人死亡。```0
   ## 6/2/2023 - [6.4忌日临近 北京强迫旅游异议人士 加紧驱赶人权律师](https://www.voachinese.com/a/beijing-escalates-security-measures-by-driving-away-dissidents-and-rights-lawyers-prior-to-34th-anniversary-of-tiananmen-massacre-20230602/7119401.html)
  ```震惊世界的天安门事件34周年来临之际，中共当局在党总书记习近平强行连任、经历三年疫情和白纸运动之后仍然一如既往地避而不提其当年所称的“平息反革命暴乱”或后来淡化为“政治风波”的这段历史，而是一再强调国家安全，高度戒备，加强了对政治敏感人物的严密监控，要求他们在六四敏感期噤声及中断与外界联系，甚至强迫一些异议人士外出旅游，同时加紧驱赶一些在北京的人权律师及其亲属，严重干扰了他们的正常生活和工作。```0
-  ## 6/2/2023 - [美中关系恶化 北京为何奉马斯克为座上宾？](https://www.voachinese.com/a/musk-china-visit-20230601/7119766.html)
- ```特斯拉公司首席执行官埃隆·马斯克时隔三年后访问中国，受到北京高规格接待。分析认为，中国利用马斯克这样的国际商界领袖重塑自己的“开放”形象，而国际企业在急于维持中国市场的同时将不可避免地受到美中关系“逆风”的影响。```0
