--- a/新闻/英国广播公司.md
+++ b/新闻/英国广播公司.md
@@ -1,4 +1,6 @@
 
+  ## 6/3/2023 - [“武统台湾”民调、清真寺遭强拆、北约“东进”和本周更多重要故事](https://www.bbc.com/zhongwen/simp/press-review-65786824?at_medium=RSS&at_campaign=KARANGA)
+ ```刚刚过去的一周，BBC中文以下新闻内容受到读者的关注。如果你错过了，我们带你一一回顾。```0
   ## 6/2/2023 - [香格里拉对话会2023：世界待看中美防长“擦身而过”，台海朝鲜又添阴霾](https://www.bbc.com/zhongwen/simp/world-65788097?at_medium=RSS&at_campaign=KARANGA)
  ```在中国国防部长李尚福拒绝会晤美国国防部长奥斯汀的背景下，世界安全首脑齐集新加坡观察两个大国如何唇枪舌剑。```0
   ## 6/2/2023 - [台美签署21世纪贸易倡议 北京称美对台“敲骨吸髓”](https://www.bbc.com/zhongwen/simp/business-65788057?at_medium=RSS&at_campaign=KARANGA)
