--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -3,7 +3,7 @@
  ```中国和俄罗斯周五（6月2日）无视美国呼吁联合国安理会团结起来，共同谴责朝鲜本周试图发射卫星，反而指责华盛顿加剧了朝鲜半岛的紧张局势。```0
   ## 6/3/2023 - [拜登在白宫椭圆形办公室就避免债务违约发表讲话，强调两党妥协与共识](https://www.voachinese.com/a/biden-highlights-compromise-in-oval-office-remarks-on-us-avoiding-default-20230602/7121372.html)
  ```在进行了几个星期的艰难谈判后，美国总统乔·拜登星期五(6月2日)晚间就《财政责任法案》的通过发表讲话，强调了他与共和党人达成两党共识的能力。在拜登2024年竞选连任期间，这肯定将会是他再度凸显的一个主题```0
-  ## 6/3/2023 - [美国国防部长抨击中国无意进行军事对话](https://www.voachinese.com/a/u-s-defense-chief-slams-china-for-lack-of-military-dialog-20230602/7121371.html)
+  ## 6/3/2023 - [美国国防部长告诉中国 会谈是避免危机的关键](https://www.voachinese.com/a/u-s-defense-chief-slams-china-for-lack-of-military-dialog-20230602/7121371.html)
  ```美国国防部长劳埃德·奥斯汀周六表示，他对中国不愿就军事危机管控进行接触深表关切，并警告说会谈是避免冲突的关键。```0
   ## 6/3/2023 - [又有两名“誓言守护者”因冲击国会山事件被判刑](https://www.voachinese.com/a/oath-keepers-convicted-of-storming-capitol-get-latest-extremist-sentencings-20230602/7121343.html)
  ```两名极右翼组织“誓言守护者”的成员周五(6月2日)因煽动串谋和其他指控被判处三年监禁——这是与2021年1月6冲击国会山事件相关的最新判决。```0
